--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.4 Paimon Catalog.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.4 Paimon Catalog.md
@@ -2,17 +2,17 @@
 
 ## 1 使用须知
 
-1. 数据放在 hdfs 时，需要将 core-site.xml，hdfs-site.xml 和 hive-site.xml 放到 FE 和 BE 的 conf 目录下。优先读取 conf 目录下的 hadoop 配置文件，再读取环境变量 `HADOOP_CONF_DIR` 的相关配置文件。
+1. 数据放在 `hdfs` 时，需要将 `core-site.xml` ， `hdfs-site.xml` 和 `hive-site.xml` 放到 `FE` 和 `BE` 的 `conf` 目录下。优先读取 `conf` 目录下的 `hadoop` 配置文件，再读取环境变量 `HADOOP_CONF_DIR` 的相关配置文件。
 
-2. 当前适配的 Paimon 版本为 0.8。
+2. 当前适配的 `Paimon` 版本为 `0.8` 。
 
 ## 2 创建 Catalog
 
-Paimon Catalog 当前支持两种类型的 Metastore 创建 Catalog:
+`Paimon Catalog` 当前支持两种类型的 `Metastore` 创建 `Catalog` ：
 
-* filesystem（默认），同时存储元数据和数据在 filesystem。
+* `filesystem` （默认），同时存储元数据和数据在 `filesystem` 。
 
-* hive metastore，它还将元数据存储在 Hive metastore 中。用户可以直接从 Hive 访问这些表。
+* `hive metastore` ，它还将元数据存储在 `Hive metastore` 中。用户可以直接从 `Hive` 访问这些表。
 
 ### 2.1 基于 FileSystem 创建 Catalog
 
@@ -128,7 +128,7 @@ CREATE CATALOG `paimon_kerberos` PROPERTIES (
 
 ### 2.3 基于 Aliyun DLF 创建 Catalog
 
-该功能自 2.1.7 和 3.0.3 版本支持。
+该功能自 `2.1.7` 和 `3.0.3` 版本支持。
 
 ```sql
 CREATE CATALOG `paimon_dlf` PROPERTIES (
@@ -169,22 +169,22 @@ CREATE CATALOG `paimon_dlf` PROPERTIES (
 
 ## 4 常见问题
 
-1. Kerberos 问题
+1. `Kerberos` 问题
 
-    * 确保 principal 和 keytab 配置正确。
+    * 确保 `principal` 和 `keytab` 配置正确。
 
-    * 需在 BE 节点启动定时任务（如 crontab），每隔一定时间（如 12 小时），执行一次 `kinit -kt your_principal your_keytab` 命令。
+    * 需在 `BE` 节点启动定时任务（如 `crontab` ），每隔一定时间（如 `12` 小时），执行一次 `kinit -kt your_principal your_keytab` 命令。
 
-2. Unknown type value: UNSUPPORTED
+2. `Unknown type value` ： `UNSUPPORTED`
 
-    这是 Doris 2.0.2 版本和 Paimon 0.5 版本的一个兼容性问题，需要升级到 2.0.3 或更高版本解决，或自行 patch
+    这是 `Doris 2.0.2` 版本和 `Paimon 0.5` 版本的一个兼容性问题，需要升级到 `2.0.3` 或更高版本解决，或自行 `patch`
 
-3. 访问对象存储（OSS、S3 等）报错文件系统不支持
+3. 访问对象存储（ `OSS` 、 `S3` 等）报错文件系统不支持
 
-    在 2.0.5（含）之前的版本，用户需手动下载以下 jar 包并放置在 `${DORIS_HOME}/be/lib/java_extensions/preload-extensions` 目录下，重启 BE。
+    在 `2.0.5` （含）之前的版本，用户需手动下载以下 `jar` 包并放置在 `${DORIS_HOME}/be/lib/java_extensions/preload-extensions` 目录下，重启 `BE` 。
 
-    * 访问 OSS：paimon-oss-0.6.0-incubating.jar
+    * 访问 `OSS` ： `paimon-oss-0.6.0-incubating.jar`
 
-    * 访问其他对象存储：paimon-s3-0.6.0-incubating.jar
+    * 访问其他对象存储： `paimon-s3-0.6.0-incubating.jar`
 
-    2.0.6 之后的版本不再需要用户手动放置。
+    `2.0.6` 之后的版本不再需要用户手动放置。
