--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.5 LakeSoul Catalog.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.5 LakeSoul Catalog.md
@@ -6,13 +6,13 @@
 
 ## 1 使用须知
 
-1. 目前支持 LakeSoul 作为 Source 的读操作，支持 LakeSoul 的主键表、无主键表，支持 MOR 读取。
+1. 目前支持 `LakeSoul` 作为 `Source` 的读操作，支持 `LakeSoul` 的主键表、无主键表，支持 `MOR` 读取。
 
-2. LakeSoul 的数据存储在 HDFS 上时，需要将 core-site.xml，hdfs-site.xml 和 hive-site.xml 放到 FE 和 BE 的 conf 目录下。优先读取 conf 目录下的 hadoop 配置文件，再读取环境变量 `HADOOP_CONF_DIR` 的相关配置文件。
+2. `LakeSoul` 的数据存储在 `HDFS` 上时，需要将 `core-site.xml` ， `hdfs-site.xml` 和 `hive-site.xml` 放到 `FE` 和 `BE` 的 `conf` 目录下。优先读取 `conf` 目录下的 `hadoop` 配置文件，再读取环境变量 `HADOOP_CONF_DIR` 的相关配置文件。
 
 ## 2 Doris 中创建 Catalog
 
-LakeSoul Catalog 创建时需要指定 LakeSoul 元数据的连接信息。关于 LakeSoul 的环境搭建，请参考 LakeSoul 文档。
+`LakeSoul Catalog` 创建时需要指定 `LakeSoul` 元数据的连接信息。关于 `LakeSoul` 的环境搭建，请参考 `LakeSoul` 文档。
 
 ### 2.1 创建 Catalog 示例
 
