--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.4 管理 Storage Vault.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.4 管理 Storage Vault.md
@@ -1,6 +1,6 @@
 # 8.4 管理 Storage Vault
 
-Storage Vault 是 Doris 在存算分离模式中所使用的远程共享存储，可配置一个或多个 Storage Vault，可将不同表存储在不同 Storage Vault 上。
+`Storage Vault` 是 `Doris` 在存算分离模式中所使用的远程共享存储，可配置一个或多个 `Storage Vault` ，可将不同表存储在不同 `Storage Vault` 上。
 
 ## 1 创建 Storage Vault
 
@@ -12,11 +12,11 @@ PROPERTIES
 ("key" = "value",...)
 ```
 
-<vault_name> 是用户定义的 Storage Vault 名称，是用户接口用于访问 Storage Vault 的标识。
+`<vault_name>` 是用户定义的 `Storage Vault` 名称，是用户接口用于访问 `Storage Vault` 的标识。
 
 ### 1.1 创建 HDFS Storage Vault
 
-创建基于 HDFS 的存算分离模式 Doris 集群，需要确保所有的节点（包括 FE / BE 节点、Meta Service) 均有权限访问所指定的 HDFS，包括提前完成机器的 Kerberos 授权配置和连通性检查（可在对应的每个节点上使用 Hadoop Client 进行测试）等。
+创建基于 `HDFS` 的存算分离模式 `Doris` 集群，需要确保所有的节点（包括 `FE / BE` 节点、 `Meta Service` ）均有权限访问所指定的 `HDFS` ，包括提前完成机器的 `Kerberos` 授权配置和连通性检查（可在对应的每个节点上使用 `Hadoop Client` 进行测试）等。
 
 ```sql
 CREATE STORAGE VAULT IF NOT EXISTS ssb_hdfs_vault
@@ -47,7 +47,7 @@ CREATE STORAGE VAULT IF NOT EXISTS ssb_s3_vault
     );
 ```
 
-更多参数说明及示例可见 CREATE-STORAGE-VAULT。
+更多参数说明及示例可见 `CREATE-STORAGE-VAULT` 。
 
 ## 2 查看 Storage Vault
 
@@ -57,7 +57,7 @@ CREATE STORAGE VAULT IF NOT EXISTS ssb_s3_vault
 SHOW STORAGE VAULTS
 ```
 
-返回结果包含 4 列，分别为 Storage Vault 名称、 Storage Vault ID、属性以及是否为默认 Storage Vault 。
+返回结果包含 `4` 列，分别为 `Storage Vault` 名称、 `Storage Vault ID` 、属性以及是否为默认 `Storage Vault` 。
 
 ### 2.1 设置默认 Storage Vault
 
@@ -69,7 +69,7 @@ SET <vault_name> AS DEFAULT STORAGE VAULT
 
 ## 3 建表时指定 Storage Vault
 
-建表时在 `PROPERTIES` 中指定 `storage_vault_name` ，则数据会存储在指定 `vault name` 所对应的 Storage Vault 上。建表成功后，该表不允许再修改 `storage_vault` ，即不支持更换 Storage Vault 。
+建表时在 `PROPERTIES` 中指定 `storage_vault_name` ，则数据会存储在指定 `vault name` 所对应的 `Storage Vault` 上。建表成功后，该表不允许再修改 `storage_vault` ，即不支持更换 `Storage Vault` 。
 
 示例
 
@@ -93,25 +93,25 @@ PROPERTIES (
 
 ## 4 更改 Storage Vault
 
-用于更新 Storage Vault 配置的可修改属性。
+用于更新 `Storage Vault` 配置的可修改属性。
 
-S3 Storage Vault 允许修改的属性:
+`S3 Storage Vault` 允许修改的属性：
 
-* VAULT_NAME
+* `VAULT_NAME`
 
-* s3.access_key
+* `s3.access_key`
 
-* s3.secret_key
+* `s3.secret_key`
 
-* use_path_style
+* `use_path_style`
 
-HDFS Storage Vault 禁止修改的属性:
+`HDFS Storage Vault` 禁止修改的属性：
 
-* path_prefix
+* `path_prefix`
 
-* fs.defaultFS
+* `fs.defaultFS`
 
-更多属性说明见 CREATE-STORAGE-VAULT。
+更多属性说明见 `CREATE-STORAGE-VAULT` 。
 
 示例
 
@@ -140,7 +140,7 @@ PROPERTIES (
 
 ## 6 Storage Vault 权限
 
-向指定的 MySQL 用户授予某个 Storage Vault 的使用权限，使该用户可以进行建表时指定该 Storage Vault 或查看 Storage Vault 等操作。
+向指定的 `MySQL` 用户授予某个 `Storage Vault` 的使用权限，使该用户可以进行建表时指定该 `Storage Vault` 或查看 `Storage Vault` 等操作。
 
 ### 6.1 授予
 
@@ -151,11 +151,11 @@ GRANT
     TO { ROLE | USER } {<role> | <user>}
 ```
 
-仅 Admin 用户有权限执行 `GRANT` 语句，该语句用于向 User / Role 授予指定 Storage Vault 的权限。拥有某个 Storage Vault 的 `USAGE_PRIV` 权限的 User / Role 可进行以下操作：
+仅 `Admin` 用户有权限执行 `GRANT` 语句，该语句用于向 `User / Role` 授予指定 `Storage Vault` 的权限。拥有某个 `Storage Vault` 的 `USAGE_PRIV` 权限的 `User / Role` 可进行以下操作：
 
-* 通过 `SHOW STORAGE VAULT` 查看该 Storage Vault 的信息；
+* 通过 `SHOW STORAGE VAULT` 查看该 `Storage Vault` 的信息；
 
-* 建表时在 `PROPERTIES` 中指定使用该 Storage Vault 。
+* 建表时在 `PROPERTIES` 中指定使用该 `Storage Vault` 。
 
 ### 6.2 撤销
 
@@ -163,7 +163,7 @@ GRANT
 grant usage_priv on storage vault my_storage_vault to user1
 ```
 
-撤销指定的 MySQL 用户的 Storage Vault 权限。
+撤销指定的 `MySQL` 用户的 `Storage Vault` 权限。
 
 语法
 
@@ -174,7 +174,7 @@ REVOKE
     FROM { ROLE | USER } {<role> | <user>}
 ```
 
-仅 Admin 用户有权限执行 REVOKE 语句，用于撤销 User / Role 拥有的对指定 Storage Vault 的权限。
+仅 `Admin` 用户有权限执行 `REVOKE` 语句，用于撤销 `User / Role` 拥有的对指定 `Storage Vault` 的权限。
 
 示例
 
