--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.11 SQL 方言兼容.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.11 SQL 方言兼容.md
@@ -2,23 +2,23 @@
 
 !!! tip
 
-    从 2.1 版本开始，Doris 可以支持多种 SQL 方言，如 Presto、Trino、Hive、PostgreSQL、Spark、Clickhouse 等等。通过这个功能，用户可以直接使用对应的 SQL 方言查询 Doris 中的数据，方便用户将原先的业务平滑的迁移到 Doris 中。
+    从 `2.1` 版本开始， `Doris` 可以支持多种 `SQL` 方言，如 `Presto` 、 `Trino` 、 `Hive` 、 `PostgreSQL` 、 `Spark` 、 `Clickhouse` 等等。通过这个功能，用户可以直接使用对应的 `SQL` 方言查询 `Doris` 中的数据，方便用户将原先的业务平滑的迁移到 `Doris` 中。
 
 !!! warning
 
-    该功能目前是实验性功能，您在使用过程中如遇到任何问题，欢迎通过邮件组、GitHub Issue 等方式进行反馈。
+    该功能目前是实验性功能，您在使用过程中如遇到任何问题，欢迎通过邮件组、 `GitHub Issue` 等方式进行反馈。
 
 ## 1 部署服务
 
-1. 下载最新版本的 SQL 方言转换工具
+1. 下载最新版本的 `SQL` 方言转换工具
 
     !!! tip
 
-        SQL 方言转换工具基于开源的 SQLGlot ，由 SelectDB 进行二次开发，关于 SQLGlot 可参阅 SQLGlot 官网。
+        `SQL` 方言转换工具基于开源的 `SQLGlot` ，由 `SelectDB` 进行二次开发，关于 `SQLGlot` 可参阅 `SQLGlot` 官网。
 
-        SQL Convertor 并非由 Apache Doris 维护或认可，这些工作由 Committers 和 Doris PMC 监督。使用这些资源和服务完全由您自行决定，社区不负责验证这些工具的许可或有效性。
+        `SQL Convertor` 并非由 `Apache Doris` 维护或认可，这些工作由 `Committers` 和 `Doris PMC` 监督。使用这些资源和服务完全由您自行决定，社区不负责验证这些工具的许可或有效性。
 
-2. 在任意 FE 节点，通过以下命令启动服务：
+2. 在任意 `FE` 节点，通过以下命令启动服务：
 
     ```shell
     # 配置服务端口
@@ -40,39 +40,39 @@
 
     !!! tip
 
-        * 该服务是一个无状态的服务, 可随时启停
+        * 该服务是一个无状态的服务，可随时启停
 
-        * 在 `apiserver/conf/config.conf` 中配置 port 来指定任意一个可用端口, 配置 workers 来指定启动的线程数量. 在并发场景中, 可以根据需要调整, 默认为 1
+        * 在 `apiserver/conf/config.conf` 中配置 `port` 来指定任意一个可用端口，配置 `workers` 来指定启动的线程数量。在并发场景中，可以根据需要调整，默认为 `1`
 
-        * 建议在每个 FE 节点都单独启动一个服务
+        * 建议在每个 `FE` 节点都单独启动一个服务
 
-        * 如需启动前端界面, 可以在 `webserver/conf/config.conf` 中配置 SQL Converter for Apache Doris 转换服务地址, 默认是 `API_HOST=<http://127.0.0.1:5001>`
+        * 如需启动前端界面，可以在 `webserver/conf/config.conf` 中配置 `SQL Converter for Apache Doris` 转换服务地址，默认是 `API_HOST=<http://127.0.0.1:5001>`
 
-3. 启动 Doris 集群（2.1 或更高版本）
+3. 启动 `Doris` 集群（ `2.1` 或更高版本）
 
-4. 通过以下命令，在 Doris 中设置 SQL 方言转换服务的 URL：
+4. 通过以下命令，在 `Doris` 中设置 `SQL` 方言转换服务的 `URL` ：
 
     ```sql
     MySQL> set global sql_converter_service_url = "<http://127.0.0.1:5001/api/v1/convert>"
     ```
 
-    * `127.0.0.1:5001` 是 SQL 方言转换服务的部署节点 ip 和端口。
+    * `127.0.0.1:5001` 是 `SQL` 方言转换服务的部署节点 `ip` 和端口。
 
 ## 2 使用 SQL 方言
 
 目前支持的方言类型包括：
 
-* presto
+* `presto`
 
-* trino
+* `trino`
 
-* clickhouse
+* `clickhouse`
 
-* hive
+* `hive`
 
-* spark
+* `spark`
 
-* postgres
+* `postgres`
 
 示例：
 
