--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.1 Hive Catalog.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.1 Hive Catalog.md
@@ -1,20 +1,20 @@
 # 7.2.1 Hive Catalog
 
-通过连接 Hive Metastore，或者兼容 Hive Metatore 的元数据服务，Doris 可以自动获取 Hive 的库表信息，并进行数据查询。
+通过连接 `Hive Metastore` ，或者兼容 `Hive Metatore` 的元数据服务， `Doris` 可以自动获取 `Hive` 的库表信息，并进行数据查询。
 
-除了 Hive 外，很多其他系统也会使用 Hive Metastore 存储元数据。所以通过 Hive Catalog，我们不仅能访问 Hive，也能访问使用 Hive Metastore 作为元数据存储的系统。如 Iceberg、Hudi 等。
+除了 `Hive` 外，很多其他系统也会使用 `Hive Metastore` 存储元数据。所以通过 `Hive Catalog` ，我们不仅能访问 `Hive` ，也能访问使用 `Hive Metastore` 作为元数据存储的系统。如 `Iceberg` 、 `Hudi` 等。
 
 ## 1 使用须知
 
 1. 将 `core-site.xml` ， `hdfs-site.xml` 和 `hive-site.xml` 放到 `FE` 和 `BE` 的 `conf` 目录下。优先读取 `conf` 目录下的 `hadoop` 配置文件，再读取环境变量 `HADOOP_CONF_DIR` 的相关配置文件。
 
-2. Hive 支持 1/2/3 版本。
+2. `Hive` 支持 `1/2/3` 版本。
 
-3. 支持 Managed Table 和 External Table，支持部分 Hive View。
+3. 支持 `Managed Table` 和 `External Table` ，支持部分 `Hive View` 。
 
-4. 可以识别 Hive Metastore 中存储的 Hive、Iceberg、Hudi 元数据。
+4. 可以识别 `Hive Metastore` 中存储的 `Hive` 、 `Iceberg` 、 `Hudi` 元数据。
 
-5. 如果 Hadoop 节点配置了 `hostname` ，请确保添加对应的映射关系到 `/etc/hosts` 文件。
+5. 如果 `Hadoop` 节点配置了 `hostname` ，请确保添加对应的映射关系到 `/etc/hosts` 文件。
 
 ## 2 创建 Catalog
 
@@ -30,9 +30,9 @@ CREATE CATALOG hive PROPERTIES (
 
 除了 `type` 和 `hive.metastore.uris` 两个必须参数外，还可以通过更多参数来传递连接所需要的信息。
 
-这些参数大多来自于 hadoop 集群的 `core-site.xml` ,  `hdfs-site.xml` 和 `hive-site.xml` 配置文件中。
+这些参数大多来自于 `hadoop` 集群的 `core-site.xml` ， `hdfs-site.xml` 和 `hive-site.xml` 配置文件中。
 
-如提供 HDFS HA 信息，示例如下：
+如提供 `HDFS HA` 信息，示例如下：
 
 ```sql
 CREATE CATALOG hive PROPERTIES (
@@ -47,7 +47,7 @@ CREATE CATALOG hive PROPERTIES (
 );
 ```
 
-关于 Kerberos 相关配置，请参阅 `连接 Kerberos 认证的 Hive 集群` 一节。
+关于 `Kerberos` 相关配置，请参阅 `连接 Kerberos 认证的 Hive 集群` 一节。
 
 ### 2.2 Hive On ViewFS
 
@@ -67,13 +67,13 @@ CREATE CATALOG hive PROPERTIES (
 );
 ```
 
-ViewFS 相关参数可以如上面一样添加到 Catalog 配置中，也可以添加到 `conf/core-site.xml` 中。
+`ViewFS` 相关参数可以如上面一样添加到 `Catalog` 配置中，也可以添加到 `conf/core-site.xml` 中。
 
-ViewFS 工作原理和参数配置可以参考 Hadoop 相关文档，比如 ViewFS Guide。
+`ViewFS` 工作原理和参数配置可以参考 `Hadoop` 相关文档，比如 `ViewFS Guide` 。
 
 ### 2.3 Hive On JuiceFS
 
-数据存储在 JuiceFS，示例如下：
+数据存储在 `JuiceFS` ，示例如下：
 
 （需要把 `juicefs-hadoop-x.x.x.jar` 放在 `fe/lib/` 和 `apache_hdfs_broker/lib/` 下）
 
@@ -92,9 +92,9 @@ CREATE CATALOG hive PROPERTIES (
 
 !!! tip
 
-    Doris 2.0.13 / 2.1.5 后支持该功能
+    `Doris 2.0.13 / 2.1.5` 后支持该功能
 
-腾讯云 DLC 采用HMS管理元数据，因此可用 Hive catalog 进行联邦分析。 DLC 可基于 lakefs 或 cosn 进行数据存储。以下 catalog 创建方法对两种 FS 都适用。
+腾讯云 `DLC` 采用 `HMS` 管理元数据，因此可用 `Hive catalog` 进行联邦分析。 `DLC` 可基于 `lakefs` 或 `cosn` 进行数据存储。以下 `catalog` 创建方法对两种 `FS` 都适用。
 
 ```sql
 CREATE CATALOG dlc PROPERTIES (
@@ -110,7 +110,7 @@ CREATE CATALOG dlc PROPERTIES (
 );
 ```
 
-创建完 catalog 后需要对 catalog 绑定的 appid 进行授权 。
+创建完 `catalog` 后需要对 `catalog` 绑定的 `appid` 进行授权。
 
 ### 2.5 Hive On S3
 
@@ -128,11 +128,11 @@ CREATE CATALOG hive PROPERTIES (
 
 可选属性：
 
-* s3.connection.maximum：S3 最大连接数，默认 50
+* `s3.connection.maximum` ： `S3` 最大连接数，默认 `50`
 
-* s3.connection.request.timeout：S3 请求超时时间，默认 3000ms
+* `s3.connection.request.timeout` ： `S3` 请求超时时间，默认 `3000ms`
 
-* s3.connection.timeout：S3 连接超时时间，默认 1000ms
+* `s3.connection.timeout` ： `S3` 连接超时时间，默认 `1000ms`
 
 ### 2.6 Hive On OSS
 
@@ -172,7 +172,7 @@ CREATE CATALOG hive PROPERTIES (
 
 ### 2.9 Hive With Glue
 
-连接 Glue 时，如果是在非 EC2 环境，需要将 EC2 环境里的 `~/.aws` 目录拷贝到当前环境里。也可以下载 AWS Cli 工具进行配置，这种方式也会在当前用户目录下创建 `.aws` 目录。
+连接 `Glue` 时，如果是在非 `EC2` 环境，需要将 `EC2` 环境里的 `~/.aws` 目录拷贝到当前环境里。也可以下载 `AWS Cli` 工具进行配置，这种方式也会在当前用户目录下创建 `.aws` 目录。
 
 ```sql
 CREATE CATALOG hive PROPERTIES (
@@ -186,13 +186,13 @@ CREATE CATALOG hive PROPERTIES (
 
 ## 3 元数据缓存与刷新
 
-关于元数据缓存和刷新机制，请参阅 元数据缓存文档。
+关于元数据缓存和刷新机制，请参阅元数据缓存文档。
 
-这里主要介绍，基于 Hive Metastore 元数据事件的自定元数据订阅
+这里主要介绍，基于 `Hive Metastore` 元数据事件的自定元数据订阅
 
 ### 3.1 订阅 Hive Metastore
 
-通过让 FE 节点定时读取 HMS 的 Notification Event 来感知 Hive 表元数据的变更情况，目前支持处理如下 Event：
+通过让 `FE` 节点定时读取 `HMS` 的 `Notification Event` 来感知 `Hive` 表元数据的变更情况，目前支持处理如下 `Event` ：
 
 | 事件 | 事件行为和对应的动作 |
 | -- | -- |
@@ -206,19 +206,19 @@ CREATE CATALOG hive PROPERTIES (
 | DROP PARTITION | 在对应表缓存的分区列表里删除分区，并失效该分区的缓存。 |
 | ALTER PARTITION | 如果是重命名，先删除旧名字的分区，再用新名字创建分区，否则失效该分区的缓存。 |
 
-当导入数据导致文件变更，分区表会走 ALTER PARTITION Event 逻辑，不分区表会走 ALTER TABLE Event 逻辑。
+当导入数据导致文件变更，分区表会走 `ALTER PARTITION Event` 逻辑，不分区表会走 `ALTER TABLE Event` 逻辑。
 
-如果绕过 HMS 直接操作文件系统的话，HMS 不会生成对应事件，Doris 因此也无法感知
+如果绕过 `HMS` 直接操作文件系统的话， `HMS` 不会生成对应事件， `Doris` 因此也无法感知
 
 该特性在 `fe.conf` 中有如下参数：
 
-1. `enable_hms_events_incremental_sync` : 是否开启元数据自动增量同步功能，默认关闭。
+1. `enable_hms_events_incremental_sync` ：是否开启元数据自动增量同步功能，默认关闭。
 
-2. `hms_events_polling_interval_ms` : 读取 event 的间隔时间，默认值为 10000，单位：毫秒。
+2. `hms_events_polling_interval_ms` ：读取 `event` 的间隔时间，默认值为 `10000` ，单位：毫秒。
 
-3. `hms_events_batch_size_per_rpc` : 每次读取 event 的最大数量，默认值为 500。
+3. `hms_events_batch_size_per_rpc` ：每次读取 `event` 的最大数量，默认值为 `500` 。
 
-如果想使用该特性 (华为 MRS 除外)，需要更改 HMS 的 `hive-site.xml` 并重启 HMS 和 HiveServer2：
+如果想使用该特性（华为 `MRS` 除外），需要更改 `HMS` 的 `hive-site.xml` 并重启 `HMS` 和 `HiveServer2` ：
 
 ```xml
 <property>
@@ -235,7 +235,7 @@ CREATE CATALOG hive PROPERTIES (
 </property>
 ```
 
-华为的 MRS 需要更改 `hivemetastore-site.xml` 并重启 HMS 和 HiveServer2：
+华为的 `MRS` 需要更改 `hivemetastore-site.xml` 并重启 `HMS` 和 `HiveServer2` ：
 
 ```xml
 <property>
@@ -246,11 +246,11 @@ CREATE CATALOG hive PROPERTIES (
 
 ## 4 Hive 版本
 
-Doris 可以正确访问不同 Hive 版本中的 Hive Metastore。在默认情况下，Doris 会以 Hive 2.3 版本的兼容接口访问 Hive Metastore。
+`Doris` 可以正确访问不同 `Hive` 版本中的 `Hive Metastore` 。在默认情况下， `Doris` 会以 `Hive 2.3` 版本的兼容接口访问 `Hive Metastore` 。
 
-如在查询时遇到如 `Invalid method name: 'get_table_req'` 类似错误，说明 Hive 版本不匹配。
+如在查询时遇到如 `Invalid method name: 'get_table_req'` 类似错误，说明 `Hive` 版本不匹配。
 
-你可以在创建 Catalog 时指定 Hive 的版本。如访问 Hive 1.1.0 版本：
+你可以在创建 `Catalog` 时指定 `Hive` 的版本。如访问 `Hive 1.1.0` 版本：
 
 ```sql
 CREATE CATALOG hive PROPERTIES (
@@ -262,7 +262,7 @@ CREATE CATALOG hive PROPERTIES (
 
 ## 5 列类型映射
 
-适用于 Hive/Iceberge/Hudi
+适用于 `Hive/Iceberge/Hudi`
 
 | HMS Type | Doris Type | Comment |
 | -- | -- | -- |
@@ -285,23 +285,23 @@ CREATE CATALOG hive PROPERTIES (
 
 !!! tip
 
-    注：是否按照 Hive 表的 Schema 来截断 char 或者 varchar 列
+    注：是否按照 `Hive` 表的 `Schema` 来截断 `char` 或者 `varchar` 列
 
-    如果会话变量 truncate_char_or_varchar_columns 开启，则当 Hive 表的 Schema 中 char 或者 varchar 列的最大长度和底层 Parquet 或者 ORC 文件中的 schema 不一致时会按照 Hive 表列的最大长度进行截断。
+    如果会话变量 `truncate_char_or_varchar_columns` 开启，则当 `Hive` 表的 `Schema` 中 `char` 或者 `varchar` 列的最大长度和底层 `Parquet` 或者 `ORC` 文件中的 `schema` 不一致时会按照 `Hive` 表列的最大长度进行截断。
 
-    该变量默认为 false。
+    该变量默认为 `false` 。
 
 ## 6 查询 Hive 分区
 
-可以通过下面两种方式查询 Hive 分区信息。
+可以通过下面两种方式查询 `Hive` 分区信息。
 
 * `SHOW PARTITIONS FROM hive_table`
 
-    该语句可以列出指定 Hive 表的所有分区以及分区值信息。
+    该语句可以列出指定 `Hive` 表的所有分区以及分区值信息。
 
 * 使用 `table$partitions` 元数据表
 
-    自 2.1.7 和 3.0.3 版本开始，用户可以通过 `table$partitions` 元数据表查询 Hive 分区信息。 `table$partitions` 本质上是一个关系表，所以可以使用在任意 SELECT 语句中。
+    自 `2.1.7` 和 `3.0.3` 版本开始，用户可以通过 `table$partitions` 元数据表查询 `Hive` 分区信息。 `table$partitions` 本质上是一个关系表，所以可以使用在任意 `SELECT` 语句中。
 
     ```sql
     SELECT * FROM hive_table$partitions;
@@ -309,13 +309,13 @@ CREATE CATALOG hive PROPERTIES (
 
 ## 7 使用 broker 访问 HMS
 
-创建 HMS Catalog 时增加如下配置，Hive 外表文件分片和文件扫描将会由名为 `test_broker` 的 Broker 完成
+创建 `HMS Catalog` 时增加如下配置， `Hive` 外表文件分片和文件扫描将会由名为 `test_broker` 的 `Broker` 完成
 
 ```text
 "broker.name" = "test_broker"
 ```
 
-Doris 基于 `Iceberg FileIO` 接口实现了 Broker 查询 HMS Catalog Iceberg 的支持。如有需求，可以在创建 HMS Catalog 时增加如下配置。
+`Doris` 基于 `Iceberg FileIO` 接口实现了 `Broker` 查询 `HMS Catalog Iceberg` 的支持。如有需求，可以在创建 `HMS Catalog` 时增加如下配置。
 
 ```text
 "io-impl" = "org.apache.doris.datasource.iceberg.broker.IcebergBrokerIO"
@@ -323,19 +323,19 @@ Doris 基于 `Iceberg FileIO` 接口实现了 Broker 查询 HMS Catalog Iceberg 
 
 ## 8 集成 Apache Ranger
 
-Apache Ranger 是一个用来在 Hadoop 平台上进行监控，启用服务，以及全方位数据安全访问管理的安全框架。
+`Apache Ranger` 是一个用来在 `Hadoop` 平台上进行监控，启用服务，以及全方位数据安全访问管理的安全框架。
 
-Doris 支持为指定的 External Hive Catalog 使用 Apache Ranger 进行鉴权。
+`Doris` 支持为指定的 `External Hive Catalog` 使用 `Apache Ranger` 进行鉴权。
 
-目前支持 Ranger 的库、表、列的鉴权，暂不支持加密、行权限、Data Mask 等功能。
+目前支持 `Ranger` 的库、表、列的鉴权，暂不支持加密、行权限、 `Data Mask` 等功能。
 
-如需使用 Apache Ranger 为整个 Doris 集群服务进行鉴权，请参阅 Apache Ranger
+如需使用 `Apache Ranger` 为整个 `Doris` 集群服务进行鉴权，请参阅 `Apache Ranger`
 
 ### 8.1 环境配置
 
-连接开启 Ranger 权限校验的 Hive Metastore 需要增加配置 & 配置环境：
+连接开启 `Ranger` 权限校验的 `Hive Metastore` 需要增加配置 `&` 配置环境：
 
-1. 创建 Catalog 时增加：
+1. 创建 `Catalog` 时增加：
 
     ```text
     "access_controller.properties.ranger.service.name" = "hive",
@@ -346,9 +346,9 @@ Doris 支持为指定的 External Hive Catalog 使用 Apache Ranger 进行鉴权
 
     `access_controller.properties.ranger.service.name` 指的是 `service` 的类型，例如 `hive` ， `hdfs` 等。并不是配置文件中 `ranger.plugin.hive.service.name` 的值。
 
-2. 配置所有 FE 环境：
+2. 配置所有 `FE` 环境：
 
-    1. 将 `HMS conf` 目录下的配置文件 `ranger-hive-audit.xml` ,  `ranger-hive-security.xml` ,  `ranger-policymgr-ssl.xml` 复制到 FE 的 `conf` 目录下。
+    1. 将 `HMS conf` 目录下的配置文件 `ranger-hive-audit.xml` ， `ranger-hive-security.xml` ， `ranger-policymgr-ssl.xml` 复制到 `FE` 的 `conf` 目录下。
 
     2. 修改 `ranger-hive-security.xml` 的属性，参考配置如下：
 
@@ -405,65 +405,65 @@ Doris 支持为指定的 External Hive Catalog 使用 Apache Ranger 进行鉴权
         </configuration>
         ```
 
-    3. 为获取到 Ranger 鉴权本身的日志，可在 <doris_home>/conf 目录下添加配置文件 log4j.properties。
+    3. 为获取到 `Ranger` 鉴权本身的日志，可在 `<doris_home>/conf` 目录下添加配置文件 `log4j.properties` 。
 
-    4. 重启 FE。
+    4. 重启 `FE` 。
 
 ### 8.2 最佳实践
 
-1. 在 Ranger 端创建用户 user1 并授权 db1.table1.col1 的查询权限
+1. 在 `Ranger` 端创建用户 `user1` 并授权 `db1.table1.col1` 的查询权限
 
-2. 在 Ranger 端创建角色 role1 并授权 db1.table1.col2 的查询权限
+2. 在 `Ranger` 端创建角色 `role1` 并授权 `db1.table1.col2` 的查询权限
 
-3. 在 Doris 创建同名用户 user1，user1 将直接拥有 db1.table1.col1 的查询权限
+3. 在 `Doris` 创建同名用户 `user1` ， `user1` 将直接拥有 `db1.table1.col1` 的查询权限
 
-4. 在 Doris 创建同名角色 role1，并将 role1 分配给 user1，user1 将同时拥有 db1.table1.col1 和 col2 的查询权限
+4. 在 `Doris` 创建同名角色 `role1` ，并将 `role1` 分配给 `user1,user1` 将同时拥有 `db1.table1.col1` 和 `col2` 的查询权限
 
-5. Admin 和 Root 用户的权限不受 Apache Ranger 的权限控制
+5. `Admin` 和 `Root` 用户的权限不受 `Apache Ranger` 的权限控制
 
 ## 9 连接 Kerberos 认证的 Hive 集群
 
-本小节主要介绍如何连接开启 Kerberos 认证的 Hive + HDFS 集群。
+本小节主要介绍如何连接开启 `Kerberos` 认证的 `Hive + HDFS` 集群。
 
 ### 9.1 环境准备
 
-* krb5.conf
+* `krb5.conf`
 
-    `krb5.conf` 是 Kerberos 认证协议的配置文件。需将该文件部署在所有 FE 和 BE 节点上。并确保 Doris 集群可以和文件中记录的 KDC 服务连通。
+    `krb5.conf` 是 `Kerberos` 认证协议的配置文件。需将该文件部署在所有 `FE` 和 `BE` 节点上。并确保 `Doris` 集群可以和文件中记录的 `KDC` 服务连通。
 
-    默认情况下，该文件位于 Hadoop 集群的 `/etc` 目录下。但请联系 Hadoop 集群管理员获取正确的 `krb5.conf` 文件，并将其部署到所有 FE 和 BE 节点的 `/etc` 目录下。
+    默认情况下，该文件位于 `Hadoop` 集群的 `/etc` 目录下。但请联系 `Hadoop` 集群管理员获取正确的 `krb5.conf` 文件，并将其部署到所有 `FE` 和 `BE` 节点的 `/etc` 目录下。
 
-    注意，某些情况下， `krb5.conf` 的文件位置可能取决于环境变量 `KRB5_CONFIG` 或 JVM 参数中的 `-Djava.security.krb5.conf` 参数。请检查这些属性以确定 `krb5.conf` 的确切位置。
+    注意，某些情况下， `krb5.conf` 的文件位置可能取决于环境变量 `KRB5_CONFIG` 或 `JVM` 参数中的 `-Djava.security.krb5.conf` 参数。请检查这些属性以确定 `krb5.conf` 的确切位置。
 
     如需自定义 `krb5.conf` 的位置：
 
-* FE：在 `fe.conf` 配置 JVM 参数 `-Djava.security.krb5.conf`。
+* `FE` ：在 `fe.conf` 配置 `JVM` 参数 `-Djava.security.krb5.conf` 。
 
-* BE：在 `be.conf` 使用 `kerberos_krb5_conf_path` 配置项，默认值为 `/etc/krb5.conf` 。
+* `BE` ：在 `be.conf` 使用 `kerberos_krb5_conf_path` 配置项，默认值为 `/etc/krb5.conf` 。
 
-* JVM 参数
+* `JVM` 参数
 
-    请在 FE 和 BE 的 JVM 参数中添加如下配置（位于 `fe.conf` 和 `be.conf` 中）：
+    请在 `FE` 和 `BE` 的 `JVM` 参数中添加如下配置（位于 `fe.conf` 和 `be.conf` 中）：
 
-    * -Djavax.security.auth.useSubjectCredsOnly=false
+    * `-Djavax.security.auth.useSubjectCredsOnly=false`
 
-    * -Dsun.security.krb5.debug=true
+    * `-Dsun.security.krb5.debug=true`
 
-    并重启 FE、BE 节点以确保其生效。
+    并重启 `FE` 、 `BE` 节点以确保其生效。
 
 ### 9.2 Catalog 配置
 
-通常情况下，连接 Kerberos 认证的 Hive 集群，需要在 Catalog 中添加如下属性：
+通常情况下，连接 `Kerberos` 认证的 `Hive` 集群，需要在 `Catalog` 中添加如下属性：
 
-* `"hadoop.security.authentication" = "kerberos"` ：开启 kerberos 认证方式。
+* `"hadoop.security.authentication" = "kerberos"` ：开启 `kerberos` 认证方式。
 
-* `"hadoop.kerberos.principal" = "your_principal"` ：HDFS namenode 的 principal。通常是 `hdfs-site.xml` 的 `dfs.namenode.kerberos.principal` 配置。
+* `"hadoop.kerberos.principal" = "your_principal"` ： `HDFS namenode` 的 `principal` 。通常是 `hdfs-site.xml` 的 `dfs.namenode.kerberos.principal` 配置。
 
-* `"hadoop.kerberos.keytab" = "/path/to/your_keytab"` ：HDFS namenode 的 keytab 文件。通常是 `hdfs-site.xml` 的 `dfs.namenode.keytab.file` 配置。注意，这个文件需要部署到所有 FE 和 BE 节点相同的目录下（可自定义）。
+* `"hadoop.kerberos.keytab" = "/path/to/your_keytab"` ： `HDFS namenode` 的 `keytab` 文件。通常是 `hdfs-site.xml` 的 `dfs.namenode.keytab.file` 配置。注意，这个文件需要部署到所有 `FE` 和 `BE` 节点相同的目录下（可自定义）。
 
-* `"yarn.resourcemanager.principal" = "your_principal"` ：Yarn Resource Manager 的 principal，可以在 `yarn-site.xml` 中获取。
+* `"yarn.resourcemanager.principal" = "your_principal"` ： `Yarn Resource Manager` 的 `principal` ，可以在 `yarn-site.xml` 中获取。
 
-* `"hive.metastore.kerberos.principal" = "your_principal"` ：Hive metastore 的 principal。可以再 `hive-site.xml` 中。
+* `"hive.metastore.kerberos.principal" = "your_principal"` ： `Hive metastore` 的 `principal` 。可以再 `hive-site.xml` 中。
 
 注：建议使用 `kinit -kt your_principal /path/to/your_keytab` 以及 `klist -k /path/to/your_keytab` 来
 
@@ -502,11 +502,11 @@ CREATE CATALOG hive_krb_ha PROPERTIES (
 
 ### 9.3 多 Kerberos 集群配置
 
-如需同时访问多个启用了 Kerberos 的 Hadoop 集群，需要修改 `krb5.conf` 文件并且配置 `hadoop.security.auth_to_local` 属性，具体操作如下：
+如需同时访问多个启用了 `Kerberos` 的 `Hadoop` 集群，需要修改 `krb5.conf` 文件并且配置 `hadoop.security.auth_to_local` 属性，具体操作如下：
 
 1. 在 `krb5.conf` 文件配置 `Realms`
 
-    配置多集群时，需要把多个 Realm 配置到一个 `krb5.conf` 里头， `kdc` 和 `admin_server` 也可以是域名。
+    配置多集群时，需要把多个 `Realm` 配置到一个 `krb5.conf` 里头， `kdc` 和 `admin_server` 也可以是域名。
 
     ```shell
     [realms]
@@ -522,7 +522,7 @@ CREATE CATALOG hive_krb_ha PROPERTIES (
 
 2. 在 `krb5.conf` 文件配置 `domain_realm` ，
 
-    查找 `kdc` 时使用 Principal 中的 `domain_name` 去找相对应的 Realm
+    查找 `kdc` 时使用 `Principal` 中的 `domain_name` 去找相对应的 `Realm`
 
     ```shell
     [libdefaults]
@@ -535,15 +535,15 @@ CREATE CATALOG hive_krb_ha PROPERTIES (
     your-other-host.example = REALM2.COM
     ```
 
-    如果未正确配置，通常会在 Doris 的 `log/be.out` 或者 `log/fe.out` 看到两种与 `domain_realm` 有关的错误：
+    如果未正确配置，通常会在 `Doris` 的 `log/be.out` 或者 `log/fe.out` 看到两种与 `domain_realm` 有关的错误：
 
-    1. Unable to locate KDC for realm / Cannot locate KDC
+    1. `Unable to locate KDC for realm / Cannot locate KDC`
 
-    2. No service creds
+    2. `No service creds`
 
-3. 配置 Domain 到 Realm 的映射
+3. 配置 `Domain` 到 `Realm` 的映射
 
-    为了在多集群环境下，能匹配到不同 Kerberos 服用用到的的 Principal，推荐 core-site.xml 添加或修改如下配置：
+    为了在多集群环境下，能匹配到不同 `Kerberos` 服用用到的的 `Principal` ，推荐 `core-site.xml` 添加或修改如下配置：
 
     ```xml
     <property>
@@ -554,7 +554,7 @@ CREATE CATALOG hive_krb_ha PROPERTIES (
     </property>
     ```
 
-    如果需要在 Catalog 中单独生效，可以直接配置在 Properties 中：
+    如果需要在 `Catalog` 中单独生效，可以直接配置在 `Properties` 中：
 
     ```sql
     CREATE CATALOG hive_krb PROPERTIES (
@@ -572,17 +572,17 @@ CREATE CATALOG hive_krb_ha PROPERTIES (
     );
     ```
 
-4. 重启 Doris 服务
+4. 重启 `Doris` 服务
 
     检验映射规则是否能正确匹配，只要看访问不同集群时是否出现错误： `NoMatchingRule: No rules applied to user/domain_name@REALM.COM`
 
 ### 9.4 问题排查
 
-如遇 Kerberos 认证问题，在设置了 JVM 参数 `-Dsun.security.krb5.debug=true` 后，会在 `fe.out` 或 `be.out` 中打印 Kerberos 认证相关信息。可以参考 FAQ 中的相关错误进行排查。
+如遇 `Kerberos` 认证问题，在设置了 `JVM` 参数 `-Dsun.security.krb5.debug=true` 后，会在 `fe.out` 或 `be.out` 中打印 `Kerberos` 认证相关信息。可以参考 `FAQ` 中的相关错误进行排查。
 
 ## 10 Hive Transactional 表
 
-Hive Transactional 表是 Hive 中支持 ACID 语义的表。详情可见 Hive Transactions。
+`Hive Transactional` 表是 `Hive` 中支持 `ACID` 语义的表。详情可见 `Hive Transactions` 。
 
 ### 10.1 Hive Transactional 表支持情况
 
@@ -593,16 +593,16 @@ Hive Transactional 表是 Hive 中支持 ACID 语义的表。详情可见 Hive T
 
 ### 10.2 当前限制
 
-目前不支持 Original Files 的场景。 当一个表转换成 Transactional 表之后，后续新写的数据文件会使用 Hive Transactional 表的 Schema，但是已经存在的数据文件是不会转化成 Transactional 表的 Schema，这样的文件称为 Original Files。
+目前不支持 `Original Files` 的场景。当一个表转换成 `Transactional` 表之后，后续新写的数据文件会使用 `Hive Transactional` 表的 `Schema` ，但是已经存在的数据文件是不会转化成 `Transactional` 表的 `Schema` ，这样的文件称为 `Original Files` 。
 
 ## 11 最佳实践
 
-* Hive Text 格式表的中空行行为的处理
+* `Hive Text` 格式表的中空行行为的处理
 
-    默认情况下，Doris 会忽略 Text 格式表中的空行。从 2.1.5 版本开始，可以通过设置会话变量 `read_csv_empty_line_as_null` 来控制该行为。
+    默认情况下， `Doris` 会忽略 `Text` 格式表中的空行。从 `2.1.5` 版本开始，可以通过设置会话变量 `read_csv_empty_line_as_null` 来控制该行为。
 
     ```sql
     set read_csv_empty_line_as_null = true;
     ```
 
-    该变量默认为 false，表示忽略空行。如果设置为 true，这空行会读取为“所有列都是 null” 的行并返回，这种行为和部分 Hadoop 生态中查询引擎的行为一致。
+    该变量默认为 `false` ，表示忽略空行。如果设置为 `true` ，这空行会读取为“所有列都是 `null` ”的行并返回，这种行为和部分 `Hadoop` 生态中查询引擎的行为一致。
