--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.3 Iceberg Catalog.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.3 Iceberg Catalog.md
@@ -2,21 +2,21 @@
 
 ## 1 使用限制
 
-1. 支持 Iceberg V1/V2 表格式。
+1. 支持 `Iceberg V1/V2` 表格式。
 
-2. 支持 Position Delete。
+2. 支持 `Position Delete` 。
 
-3. 2.1.3 版本开始支持 Equality Delete。
+3. `2.1.3` 版本开始支持 `Equality Delete` 。
 
-4. 支持 Parquet 文件格式
+4. 支持 `Parquet` 文件格式
 
-5. 2.1.3 版本开始支持 ORC 文件格式。
+5. `2.1.3` 版本开始支持 `ORC` 文件格式。
 
 ## 2 创建 Catalog
 
 ### 2.1 基于 Hive Metastore 创建 Catalog
 
-和 Hive Catalog 基本一致，这里仅给出简单示例。其他示例可参阅 Hive Catalog。
+和 `Hive Catalog` 基本一致，这里仅给出简单示例。其他示例可参阅 `Hive Catalog` 。
 
 ```sql
 CREATE CATALOG iceberg PROPERTIES (
@@ -33,7 +33,7 @@ CREATE CATALOG iceberg PROPERTIES (
 
 ### 2.2 基于 Iceberg API 创建 Catalog
 
-使用 Iceberg API 访问元数据的方式，支持 Hadoop File System、Hive、REST、Glue、DLF 等服务作为 Iceberg 的 Catalog。
+使用 `Iceberg API` 访问元数据的方式，支持 `Hadoop File System` 、 `Hive` 、 `REST` 、 `Glue` 、 `DLF` 等服务作为 `Iceberg` 的 `Catalog` 。
 
 #### 2.2.1 Hadoop Catalog
 
@@ -41,7 +41,7 @@ CREATE CATALOG iceberg PROPERTIES (
 
     注意： `warehouse` 的路径必须指向 `Database` 路径的上一级。
 
-    示例：如果你的表路径是： `s3://bucket/path/to/db1/table1` ，那么 `warehouse` 应该是：`s3://bucket/path/to/`
+    示例：如果你的表路径是 `s3://bucket/path/to/db1/table1` ，那么 `warehouse` 应该是： `s3://bucket/path/to/`
 
 ```sql
 CREATE CATALOG iceberg_hadoop PROPERTIES (
@@ -93,7 +93,7 @@ CREATE CATALOG iceberg PROPERTIES (
 
 #### 2.2.3 AWS Glue
 
-连接 Glue 时，如果是在非 EC2 环境，需要将 EC2 环境里的 `~/.aws` 目录拷贝到当前环境里。也可以下载AWS Cli工具进行配置，这种方式也会在当前用户目录下创建 `.aws` 目录。 请升级到 Doris 2.1.7 或 3.0.3 之后的版本使用该功能。
+连接 `Glue` 时，如果是在非 `EC2` 环境，需要将 `EC2` 环境里的 `~/.aws` 目录拷贝到当前环境里。也可以下载 `AWS Cli` 工具进行配置，这种方式也会在当前用户目录下创建 `.aws` 目录。请升级到 `Doris 2.1.7` 或 `3.0.3` 之后的版本使用该功能。
 
 ```sql
 -- Using access key and secret key
@@ -107,17 +107,17 @@ CREATE CATALOG glue2 PROPERTIES (
 );
 ```
 
-1. Iceberg 属性详情参见 Iceberg Glue Catalog
+1. `Iceberg` 属性详情参见 `Iceberg Glue Catalog`
 
-2. 如果不指定 `client.credentials-provider` ，Doris 就会使用默认的 DefaultAWSCredentialsProviderChain，它会读取系统环境变量或者 InstanceProfile 中配置的属性。
+2. 如果不指定 `client.credentials-provider` ， `Doris` 就会使用默认的 `DefaultAWSCredentialsProviderChain` ，它会读取系统环境变量或者 `InstanceProfile` 中配置的属性。
 
 #### 2.2.4 阿里云 DLF
 
-参见阿里云 DLF Catalog 配置
+参见阿里云 `DLF Catalog` 配置
 
 #### 2.2.5 REST Catalog
 
-该方式需要预先提供 REST 服务，用户需实现获取 Iceberg 元数据的 REST 接口。
+该方式需要预先提供 `REST` 服务，用户需实现获取 `Iceberg` 元数据的 `REST` 接口。
 
 ```sql
 CREATE CATALOG iceberg PROPERTIES (
@@ -127,7 +127,7 @@ CREATE CATALOG iceberg PROPERTIES (
 );
 ```
 
-如果使用 HDFS 存储数据，并开启了高可用模式，还需在 Catalog 中增加 HDFS 高可用配置：
+如果使用 `HDFS` 存储数据，并开启了高可用模式，还需在 `Catalog` 中增加 `HDFS` 高可用配置：
 
 ```sql
 CREATE CATALOG iceberg PROPERTIES (
@@ -157,11 +157,11 @@ CREATE CATALOG iceberg PROPERTIES (
 );
 ```
 
-`hive.metastore.uris` : Dataproc Metastore 服务开放的接口，在 Metastore 管理页面获取：Dataproc Metastore Services.
+`hive.metastore.uris` ： `Dataproc Metastore` 服务开放的接口，在 `Metastore` 管理页面获取： `Dataproc Metastore Services` 。
 
 ### 2.3 Iceberg On Object Storage
 
-若数据存放在 S3 上，properties 中可以使用以下参数：
+若数据存放在 `S3` 上， `properties` 中可以使用以下参数：
 
 ```shell
 "s3.access_key" = "ak"
@@ -170,7 +170,7 @@ CREATE CATALOG iceberg PROPERTIES (
 "s3.region" = "us-east-1"
 ```
 
-数据存放在阿里云 OSS 上：
+数据存放在阿里云 `OSS` 上：
 
 ```shell
 "oss.access_key" = "ak"
@@ -179,7 +179,7 @@ CREATE CATALOG iceberg PROPERTIES (
 "oss.region" = "oss-cn-beijing"
 ```
 
-数据存放在腾讯云 COS 上：
+数据存放在腾讯云 `COS` 上：
 
 ```shell
 "cos.access_key" = "ak"
@@ -188,7 +188,7 @@ CREATE CATALOG iceberg PROPERTIES (
 "cos.region" = "ap-beijing"
 ```
 
-数据存放在华为云 OBS 上：
+数据存放在华为云 `OBS` 上：
 
 ```shell
 "obs.access_key" = "ak"
@@ -238,13 +238,13 @@ CREATE CATALOG `iceberg` PROPERTIES (
 
 ## 5 Time Travel
 
-支持读取 Iceberg 表指定的 Snapshot。
+支持读取 `Iceberg` 表指定的 `Snapshot` 。
 
-每一次对 iceberg 表的写操作都会产生一个新的快照。
+每一次对 `iceberg` 表的写操作都会产生一个新的快照。
 
 默认情况下，读取请求只会读取最新版本的快照。
 
-可以使用 `FOR TIME AS OF` 和 `FOR VERSION AS OF` 语句，根据快照 ID 或者快照产生的时间读取历史版本的数据。示例如下：
+可以使用 `FOR TIME AS OF` 和 `FOR VERSION AS OF` 语句，根据快照 `ID` 或者快照产生的时间读取历史版本的数据。示例如下：
 
 ```sql
 SELECT * FROM iceberg_tbl FOR TIME AS OF "2022-10-07 17:20:37";
@@ -252,4 +252,4 @@ SELECT * FROM iceberg_tbl FOR TIME AS OF "2022-10-07 17:20:37";
 SELECT * FROM iceberg_tbl FOR VERSION AS OF 868895038966572;
 ```
 
-另外，可以使用 iceberg_meta 表函数查询指定表的 snapshot 信息。
+另外，可以使用 `iceberg_meta` 表函数查询指定表的 `snapshot` 信息。
