--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.6 BigQuery Catalog.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.6 BigQuery Catalog.md
@@ -1,8 +1,8 @@
 # 7.2.6 BigQuery Catalog
 
-BigQuery Catalog 通过 Trino Connector 兼容框架，使用 BigQuery Connector 来访问 BigQuery 表。
+`BigQuery Catalog` 通过 `Trino Connector` 兼容框架，使用 `BigQuery Connector` 来访问 `BigQuery` 表。
 
-该功能自 Doris 3.0.1 版本开始支持。
+该功能自 `Doris 3.0.1` 版本开始支持。
 
 !!! tip
 
@@ -10,15 +10,15 @@ BigQuery Catalog 通过 Trino Connector 兼容框架，使用 BigQuery Connector
 
 ## 1 使用须知
 
-1. 在使用 Trino Catalog 访问 BigQuery 表之前，必须先编译 Trino 的 BigQuery 插件，并将其放在指定目录下，具体操作步骤参考下文
+1. 在使用 `Trino Catalog` 访问 `BigQuery` 表之前，必须先编译 `Trino` 的 `BigQuery` 插件，并将其放在指定目录下，具体操作步骤参考下文
 
-2. 当前 Doris 适配 Trino 435 版本的插件，如果使用低于或高于 435 版本的 Trino 插件，可能会出现兼容性问题。
+2. 当前 `Doris` 适配 `Trino 435` 版本的插件，如果使用低于或高于 `435` 版本的 `Trino` 插件，可能会出现兼容性问题。
 
 ## 2 编译 BigQuery Connector 插件
 
 !!! tip
 
-    需要 JDK 17 版本。
+    需要 `JDK 17` 版本。
 
 ```shell
 git clone https://github.com/apache/Doris-thirdparty.git
@@ -30,11 +30,11 @@ mvn clean install -DskipTest
 
 完成编译后，会在 `trino/plugin/trino-bigquery/target/` 下得到 `trino-bigquery-435/` 目录。
 
-也可以直接下载我们预编译的 trino-bigquery-435-20240724.tar.gz 并解压。
+也可以直接下载我们预编译的 `trino-bigquery-435-20240724.tar.gz` 并解压。
 
 ## 3 部署 BigQuery Connector
 
-将 `trino-bigquery-435/` 目录放到所有 FE 和 BE 部署路径的 `connectors/` 目录下。（如果没有，可以手动创建）。
+将 `trino-bigquery-435/` 目录放到所有 `FE` 和 `BE` 部署路径的 `connectors/` 目录下。（如果没有，可以手动创建）。
 
 ```shell
 ├── bin
@@ -44,11 +44,11 @@ mvn clean install -DskipTest
 ...
 ```
 
-部署完成后，建议重启 FE、BE 节点以确保 Connector 可以被正确加载。
+部署完成后，建议重启 `FE` 、 `BE` 节点以确保 `Connector` 可以被正确加载。
 
 ## 4 准备 Google Cloud ADC 认证
 
-1. 安装 gcloud CLI：<https://cloud.google.com/sdk/docs/install>
+1. 安装 `gcloud CLI` ： [https://cloud.google.com/sdk/docs/install](https://cloud.google.com/sdk/docs/install)
 
 2. 执行 `gcloud init --console-only --skip-diagnostics`
 
@@ -56,7 +56,7 @@ mvn clean install -DskipTest
 
 4. 执行 `gcloud auth application-default login`
 
-这一步是生成 ADC 认证文件，生成后的 json 默认放在 `～/.config/gcloud/application_default_credentials.json`
+这一步是生成 `ADC` 认证文件，生成后的 `json` 默认放在 `~/.config/gcloud/application_default_credentials.json`
 
 ## 5 创建 BigQuery Catalog
 
@@ -69,7 +69,7 @@ create catalog bigquery_catalog properties (
 );
 ```
 
-其中：以 `trino.` 为前缀的属性都是 trino 原生的属性，更多有关 BigQuery 的属性可以参考 Trino 文档。
+其中：以 `trino.` 为前缀的属性都是 `trino` 原生的属性，更多有关 `BigQuery` 的属性可以参考 `Trino` 文档。
 
 ## 6 列类型映射
 
