--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.3 数据湖构建/7.3.1 Hive.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.3 数据湖构建/7.3.1 Hive.md
@@ -1,8 +1,8 @@
 # 7.3.1 Hive
 
-自 2.1.3 版本开始，Apache Doris 支持对 Hive 的 DDL 和 DML 操作。用户可以直接通过 Apache Doris 在 Hive 中创建库表，并将数据写入到 Hive 表中。通过该功能，用户可以通过 Apache Doris 对 Hive 进行完整的数据查询和写入操作，进一步帮助用户简化湖仓一体架构。
+自 `2.1.3` 版本开始， `Apache Doris` 支持对 `Hive` 的 `DDL` 和 `DML` 操作。用户可以直接通过 `Apache Doris` 在 `Hive` 中创建库表，并将数据写入到 `Hive` 表中。通过该功能，用户可以通过 `Apache Doris` 对 `Hive` 进行完整的数据查询和写入操作，进一步帮助用户简化湖仓一体架构。
 
-本文介绍在 Apache Doris 中支持的 Hive 操作，语法和使用须知。
+本文介绍在 `Apache Doris` 中支持的 `Hive` 操作，语法和使用须知。
 
 !!! tip
 
@@ -12,7 +12,7 @@
 
     使用前，请先设置：
 
-    set global enable_nereids_planner = true; set global enable_fallback_to_original_planner = false;
+    `set global enable_nereids_planner = true; set global enable_fallback_to_original_planner = false;`
 
     从老版本升级上来的集群，这些参数可能有变化。
 
@@ -31,9 +31,9 @@
     );
     ```
 
-    注意，如果需要通过 Apache Doris 创建 Hive 表或写入数据，需要在 Catalog 属性中显式增加 `fs.defaultFS` 属性。如果创建 Catalog 仅用于查询，则该参数可以省略。
+    注意，如果需要通过 `Apache Doris` 创建 `Hive` 表或写入数据，需要在 `Catalog` 属性中显式增加 `fs.defaultFS` 属性。如果创建 `Catalog` 仅用于查询，则该参数可以省略。
 
-    更多参数，请参阅 Hive Catalog
+    更多参数，请参阅 `Hive Catalog`
 
 * 删除
 
@@ -41,20 +41,20 @@
     DROP CATALOG [IF EXISTS] hive;
     ```
 
-    删除 Catalog 并不会删除 hive 中的任何库表信息。仅仅是在 Apache Doris 中移除了对这个 Hive 集群的映射。
+    删除 `Catalog` 并不会删除 `hive` 中的任何库表信息。仅仅是在 `Apache Doris` 中移除了对这个 `Hive` 集群的映射。
 
 ### 1.2 Database
 
 * 创建
 
-    可以通过 `SWITCH` 语句切换到对应的 Catalog 下，执行 `CREATE DATABASE` 语句：
+    可以通过 `SWITCH` 语句切换到对应的 `Catalog` 下，执行 `CREATE DATABASE` 语句：
 
     ```sql
     SWITCH hive;
     CREATE DATABASE [IF NOT EXISTS] hive_db;
     ```
 
-    也可以使用全限定名创建，或指定 location，如：
+    也可以使用全限定名创建，或指定 `location` ，如：
 
     ```sql
     CREATE DATABASE [IF NOT EXISTS] hive.hive_db;
@@ -63,7 +63,7 @@
     PROPERTIES ('location'='hdfs://172.21.16.47:4007/path/to/db/');
     ```
 
-    之后可以通过 `SHOW CREATE DATABASE` 命令可以查看 Database 的 Location 信息：
+    之后可以通过 `SHOW CREATE DATABASE` 命令可以查看 `Database` 的 `Location` 信息：
 
     ```sql
     mysql> SHOW CREATE DATABASE hive_db;
@@ -82,13 +82,13 @@
 
     !!! warning
 
-        对于 Hive Database，必须先删除这个 Database 下的所有表后，才能删除 Database，否则会报错。这个操作会同步删除 Hive 中对应的 Database。
+        对于 `Hive Database` ，必须先删除这个 `Database` 下的所有表后，才能删除 `Database` ，否则会报错。这个操作会同步删除 `Hive` 中对应的 `Database` 。
 
 ### 1.3 Table
 
 * 创建
 
-    Apache Doris 支持在 Hive 中创建分区或非分区表。
+    `Apache Doris` 支持在 `Hive` 中创建分区或非分区表。
 
     ```sql
     -- Create unpartitioned hive table
@@ -139,13 +139,13 @@
     );
     ```
 
-    创建后，可以通过 `SHOW CREATE TABLE` 命令查看 Hive 的建表语句。
+    创建后，可以通过 `SHOW CREATE TABLE` 命令查看 `Hive` 的建表语句。
 
-    注意，不同于 Hive 中的建表语句。在 Apache Doris 中创建 Hive 分区表时，分区列也必须写到 Table 的 Schema 中。同时，分区列必须在所有 Schema 的最后，且顺序保持一致。
+    注意，不同于 `Hive` 中的建表语句。在 `Apache Doris` 中创建 `Hive` 分区表时，分区列也必须写到 `Table` 的 `Schema` 中。同时，分区列必须在所有 `Schema` 的最后，且顺序保持一致。
 
     !!! tip
 
-        对于某些默认开启 ACID 事务特性的 Hive 集群，使用 Apache Doris 建表后，表属性 `transactional` 会为 `true` 。而 Apache Doris 只支持部分 Hive 事务表的特性，因此可能会导致 Apache Doris 创建的 Hive，Apache Doris 本身无法读取的问题。因此，需要在建表的属性中，显式增加： `"transactional" = "false"` ，来创建非事务的 Hive 表：
+        对于某些默认开启 `ACID` 事务特性的 `Hive` 集群，使用 `Apache Doris` 建表后，表属性 `transactional` 会为 `true` 。而 `Apache Doris` 只支持部分 `Hive` 事务表的特性，因此可能会导致 `Apache Doris` 创建的 `Hive` ， `Apache Doris` 本身无法读取的问题。因此，需要在建表的属性中，显式增加： `"transactional" = "false"` ，来创建非事务的 `Hive` 表：
 
     ```sql
     CREATE TABLE non_acid_table(
@@ -160,11 +160,11 @@
 
 * 删除
 
-    可以通过 `DROP TABLE` 语句删除一个 Hive 表。当前删除表后，会同时删除数据，包括分区数据。
+    可以通过 `DROP TABLE` 语句删除一个 `Hive` 表。当前删除表后，会同时删除数据，包括分区数据。
 
 * 列类型
 
-    在 Apache Doris 中创建 Hive 表所使用的列类型，和 Hive 中的列类型对应关系如下
+    在 `Apache Doris` 中创建 `Hive` 表所使用的列类型，和 `Hive` 中的列类型对应关系如下
 
     | Apache Doris | Hive |
     | -- | -- |
@@ -185,59 +185,59 @@
     | MAP | MAP |
     | STRUCT | STRUCT |
 
-    * 列类型只能为默认的 Nullable，不支持 NOT NULL。
+    * 列类型只能为默认的 `Nullable` ，不支持 `NOT NULL` 。
 
-    * Hive 3.0 支持设置默认值。如果需要设置默认值，则需要再 Catalog 属性中显示的添加 "hive.version" = "3.0.0"
+    * `Hive 3.0` 支持设置默认值。如果需要设置默认值，则需要再 `Catalog` 属性中显示的添加 `"hive.version" = "3.0.0"`
 
-    * 插入数据后，如果类型不能够兼容，例如 'abc' 插入到数值类型，则会转为 null 值后插入。
+    * 插入数据后，如果类型不能够兼容，例如 `'abc'` 插入到数值类型，则会转为 `null` 值后插入。
 
 * 分区
 
-    Hive 中的分区类型对应 Apache Doris 中的 List 分区。因此，在 Apache Doris 中 创建 Hive 分区表，需使用 List 分区的建表语句，但无需显式的枚举各个分区。在写入数据时，Apache Doris 会根据数据的值，自动创建对应的 Hive 分区。
+    `Hive` 中的分区类型对应 `Apache Doris` 中的 `List` 分区。因此，在 `Apache Doris` 中创建 `Hive` 分区表，需使用 `List` 分区的建表语句，但无需显式的枚举各个分区。在写入数据时， `Apache Doris` 会根据数据的值，自动创建对应的 `Hive` 分区。
 
     支持创建单列或多列分区表。
 
 * 文件格式
 
-    * ORC（默认）
+    * `ORC` （默认）
 
-    * Parquet
+    * `Parquet`
 
-    * Text （自 2.1.7 和 3.0.3 版本开始支持）
+    * `Text` （自 `2.1.7` 和 `3.0.3` 版本开始支持）
 
-        Text 格式还支持以下表属性：
+        `Text` 格式还支持以下表属性：
 
-        * field.delim：列分隔符。默认 `\1` 。
+        * `field.delim` ：列分隔符。默认 `\1` 。
 
-        * line.delim：行分隔符。默认 `\n` 。
+        * `line.delim` ：行分隔符。默认 `\n` 。
 
-        * collection.delim：复杂类型中各元素之间的分隔符。默认 `\2` 。
+        * `collection.delim` ：复杂类型中各元素之间的分隔符。默认 `\2` 。
 
-        * mapkey.delim：Map 类型的键值分割符。默认 `\3`
+        * `mapkey.delim` ： `Map` 类型的键值分割符。默认 `\3`
 
-        * serialization.null.format：NULL 值的存储格式。默认 `\N` 。
+        * `serialization.null.format` ： `NULL` 值的存储格式。默认 `\N` 。
 
-        * escape.delim：转移字符。默认 `\` 。
+        * `escape.delim` ：转移字符。默认 `\` 。
 
 * 压缩格式
 
-    * Parquet：snappy（默认）、zstd、plain。（Plain 就是不采用压缩）
+    * `Parquet` ： `snappy` （默认）、 `zstd` 、 `plain` 。（ `Plain` 就是不采用压缩）
 
-    * ORC：snappy、zlib（默认）、zstd、plain。（Plain 就是不采用压缩）
+    * `ORC` ： `snappy` 、 `zlib` （默认）、 `zstd` 、 `plain` 。（ `Plain` 就是不采用压缩）
 
-    * Text：gzipm、defalte、bzip2、zstd、lz4、lzo、snappy、plain（默认）。（Plain 就是不采用压缩）
+    * `Text` ： `gzipm` 、 `defalte` 、 `bzip2` 、 `zstd` 、 `lz4` 、 `lzo` 、 `snappy` 、 `plain` （默认）。（ `Plain` 就是不采用压缩）
 
 * 存储介质
 
-    * HDFS
+    * `HDFS`
 
     * 对象存储
 
 ## 2 数据操作
 
-可以通过 INSERT 语句将数据写入到 Hive 表中。
+可以通过 `INSERT` 语句将数据写入到 `Hive` 表中。
 
-支持写入到由 Apache Doris 创建的 Hive 表，或者 Hive 中已存在的且格式支持的表。
+支持写入到由 `Apache Doris` 创建的 `Hive` 表，或者 `Hive` 中已存在的且格式支持的表。
 
 对于分区表，会根据数据，自动写入到对应分区，或者创建新的分区。
 
@@ -245,7 +245,7 @@
 
 ### 2.1 INSERT
 
-INSERT 操作会数据以追加的方式写入到目标表中。当前不支持指定分区写入。
+`INSERT` 操作会数据以追加的方式写入到目标表中。当前不支持指定分区写入。
 
 ```sql
 INSERT INTO hive_tbl values (val1, val2, val3, val4);
@@ -257,30 +257,30 @@ INSERT INTO hive_tbl(col1, col2, partition_col1, partition_col2) values (1, 2, "
 
 ### 2.2 INSERT OVERWRITE
 
-INSERT OVERWRITE 会使用新的数据完全覆盖原有表中的数据。当前不支持指定分区写入。
+`INSERT OVERWRITE` 会使用新的数据完全覆盖原有表中的数据。当前不支持指定分区写入。
 
 ```sql
 INSERT OVERWRITE TABLE VALUES(val1, val2, val3, val4)
 INSERT OVERWRITE TABLE hive.hive_db.hive_tbl(col1, col2) SELECT col1, col2 FROM internal.db1.tbl1;
 ```
 
-INSERT OVERWRITE 的语义与 Hive 一致，有如下行为：
+`INSERT OVERWRITE` 的语义与 `Hive` 一致，有如下行为：
 
 * 当目的表是分区表，而源表为空表时，操作不会产生任何影响。目的表数据无变化。
 
 * 当目的表是非分区表，而源表是空表是，目的表会被清空。
 
-* 当前不支持指定分区写入，因此 INSERT OVERWRITE 为根据源表中的数值，自动处理对应的目的表分区。如果目的表是分区表，则只会覆盖涉及到的分区，不涉及的分区，数据无变化。
+* 当前不支持指定分区写入，因此 `INSERT OVERWRITE` 为根据源表中的数值，自动处理对应的目的表分区。如果目的表是分区表，则只会覆盖涉及到的分区，不涉及的分区，数据无变化。
 
 ### 2.3 CTAS(CREATE TABLE AS SELECT)
 
-可以通过 `CTAS(CREATE TABLE AS SELECT)` 语句创建 Hive 表并写入数据：
+可以通过 `CTAS(CREATE TABLE AS SELECT)` 语句创建 `Hive` 表并写入数据：
 
 ```sql
 CREATE TABLE hive_ctas ENGINE=hive AS SELECT * FROM other_table;
 ```
 
-CTAS 支持指定文件格式、分区方式等信息，如：
+`CTAS` 支持指定文件格式、分区方式等信息，如：
 
 ```sql
 CREATE TABLE hive_ctas ENGINE=hive
@@ -298,21 +298,21 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
 ## 3 事务机制
 
-对 Hive 的写入操作会被放在一个单独的事务里，在事务提交前，数据对外不可见。只有当提交该事务后，表的相关操作才对其他人可见。
+对 `Hive` 的写入操作会被放在一个单独的事务里，在事务提交前，数据对外不可见。只有当提交该事务后，表的相关操作才对其他人可见。
 
 事务能保证操作的原子性，事务内的所有操作，要么全部成功，要么全部失败。
 
-事务不能完全保证操作的隔离性，只能尽力而为，通过分离文件系统操作和 对 Hive Metastore 的元数据操作来尽量减少不一致的时间窗口。
+事务不能完全保证操作的隔离性，只能尽力而为，通过分离文件系统操作和对 `Hive Metastore` 的元数据操作来尽量减少不一致的时间窗口。
 
-比如在一个事务中，需要修改 Hive 表的多个分区。假设这个任务分成两批进行操作，在第一批操作已经完成、第二批操作还未完成时，第一批分区已经对外可见，外部可以读取到第一批分区，但读不到第二批分区。
+比如在一个事务中，需要修改 `Hive` 表的多个分区。假设这个任务分成两批进行操作，在第一批操作已经完成、第二批操作还未完成时，第一批分区已经对外可见，外部可以读取到第一批分区，但读不到第二批分区。
 
-在事务提交过程中出现任何异常，都会直接回退该事务，包括对 HDFS 文件的修改、以及对 Hive Metastore 元数据的修改，不需要用户做其他处理。
+在事务提交过程中出现任何异常，都会直接回退该事务，包括对 `HDFS` 文件的修改、以及对 `Hive Metastore` 元数据的修改，不需要用户做其他处理。
 
 ### 3.1 并发写入机制
 
-当前 Apache Doris 支持使用多个插入语句进行并发写入。不过需要注意的是，用户需要控制并发写入不产生可能冲突的情况。
+当前 `Apache Doris` 支持使用多个插入语句进行并发写入。不过需要注意的是，用户需要控制并发写入不产生可能冲突的情况。
 
-因为普通非事务 Hive 表缺少完备的事务机制。通过上文介绍的 Apache Doris 事务机制我们知道目前 Apache Doris 中的实现只能是尽力而为地减少可能不一致的时间窗口，而无法保证真正的 ACID。因此在 Apache Doris 中进行并发写入Hive 表可能会导致数据一致性问题。
+因为普通非事务 `Hive` 表缺少完备的事务机制。通过上文介绍的 `Apache Doris` 事务机制我们知道目前 `Apache Doris` 中的实现只能是尽力而为地减少可能不一致的时间窗口，而无法保证真正的 `ACID` 。因此在 `Apache Doris` 中进行并发写入 `Hive` 表可能会导致数据一致性问题。
 
 1. `INSERT` 并发操作
 
@@ -326,13 +326,13 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
     * 对于分区表，可以将数据写入不同的分区，并发操作不同分区不会产生冲突。
 
-    * 对于非分区表，可以同时执行 INSERT，而不使用 INSERT OVERWRITE，这样不会产生冲突的问题。
+    * 对于非分区表，可以同时执行 `INSERT` ，而不使用 `INSERT OVERWRITE` ，这样不会产生冲突的问题。
 
     * 对于可能产生冲突的操作，需要用户在业务侧控制同一时间只有一个写入在进行。
 
 ### 3.2 HDFS 文件操作
 
-在 HDFS 上的 Hive 表数据通常会先写入到临时目录，然后通过 `rename` 等文件系统操作进行最终的文件提交。这里我们详细介绍不同数据操作中，HDFS 上文件的具体操作。
+在 `HDFS` 上的 `Hive` 表数据通常会先写入到临时目录，然后通过 `rename` 等文件系统操作进行最终的文件提交。这里我们详细介绍不同数据操作中， `HDFS` 上文件的具体操作。
 
 数据的临时目录格式为： `/tmp/.doris_staging/<username>/<uuid>`
 
@@ -342,7 +342,7 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
 1. 非分区表
 
-    * Append（追加写入）
+    * `Append` （追加写入）
 
         * 目标表目录： `hdfs://ns/usr/hive/warehouse/example.db/table1`
 
@@ -350,7 +350,7 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
         提交阶段会把所有临时文件移动到目标表目录下。
 
-    * Overwrite（覆盖写）
+    * `Overwrite` （覆盖写）
 
         * 目标表目录： `hdfs://ns/usr/hive/warehouse/example.db/table1`
 
@@ -366,7 +366,7 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
 2. 分区表
 
-    * Add（添加到新分区）
+    * `Add` （添加到新分区）
 
         * 目标表目录： `hdfs://ns/usr/hive/warehouse/example.db/table2/part_col=2024-01-01`
 
@@ -374,7 +374,7 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
         提交阶段，会将临时目录重命名为目标表目录
 
-    * Append（写入数据到已存在的分区）
+    * `Append` （写入数据到已存在的分区）
 
         * 目标表目录： `hdfs://ns/usr/hive/warehouse/example.db/table2/part_col=2024-01-01`
 
@@ -382,7 +382,7 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
         提交阶段，会将临时目录下的文件，移动到目标表目录下。
 
-    * Overwrite（覆盖已有分区）
+    * `Overwrite` （覆盖已有分区）
 
         * 目标表目录： `hdfs://ns/usr/hive/warehouse/example.db/table2/part_col=2024-01-01`
 
