--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.3 数据湖构建/7.3.2 Iceberg.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.3 数据湖构建/7.3.2 Iceberg.md
@@ -1,8 +1,8 @@
 # 7.3.2 Iceberg
 
-自 2.1.6 版本开始，Apache Doris 支持对 Iceberg 的 DDL 和 DML 操作。用户可以直接通过 Apache Doris 在 Iceberg 中创建库表，并将数据写入到 Iceberg 表中。通过该功能，用户可以通过 Apache Doris 对 Iceberg 进行完整的数据查询和写入操作，进一步帮助用户简化湖仓一体架构。
+自 `2.1.6` 版本开始， `Apache Doris` 支持对 `Iceberg` 的 `DDL` 和 `DML` 操作。用户可以直接通过 `Apache Doris` 在 `Iceberg` 中创建库表，并将数据写入到 `Iceberg` 表中。通过该功能，用户可以通过 `Apache Doris` 对 `Iceberg` 进行完整的数据查询和写入操作，进一步帮助用户简化湖仓一体架构。
 
-本文介绍在 Apache Doris 中支持的 Iceberg 操作，语法和使用须知。
+本文介绍在 `Apache Doris` 中支持的 `Iceberg` 操作，语法和使用须知。
 
 !!! tip
 
@@ -12,9 +12,9 @@
 
     使用前，请先设置：
 
-    set global enable_nereids_planner = true;
+    `set global enable_nereids_planner = true;`
 
-    set global enable_fallback_to_original_planner = false;
+    `set global enable_fallback_to_original_planner = false;`
 
 ## 1 元数据创建与删除
 
@@ -33,13 +33,13 @@
     );
     ```
 
-    上面主要演示了如何在 Apache Doris 中创建 HMS Iceberg Catalog。Apache Doris 目前支持多种类型的 Iceberg Catalog。更多配置，请参阅 Iceberg Catalog
+    上面主要演示了如何在 `Apache Doris` 中创建 `HMS Iceberg Catalog` 。 `Apache Doris` 目前支持多种类型的 `Iceberg Catalog` 。更多配置，请参阅 `Iceberg Catalog`
 
     注意：
 
-    * 如果需要通过 Apache Doris 的 Hive Catalog 创建 Iceberg 表或写入数据，需要在 Catalog 属性中显式增加 `fs.defaultFS` 属性以及 `warehouse` 属性。如果创建 Catalog 仅用于查询，则这两个参数可以省略。
+    * 如果需要通过 `Apache Doris` 的 `Hive Catalog` 创建 `Iceberg` 表或写入数据，需要在 `Catalog` 属性中显式增加 `fs.defaultFS` 属性以及 `warehouse` 属性。如果创建 `Catalog` 仅用于查询，则这两个参数可以省略。
 
-    * Hive Catalog 可以查询 Iceberg 表，但是不能在 Hive Catalog 中创建 Iceberg 表。
+    * `Hive Catalog` 可以查询 `Iceberg` 表，但是不能在 `Hive Catalog` 中创建 `Iceberg` 表。
 
 * 删除
 
@@ -47,26 +47,26 @@
     DROP CATALOG [IF EXISTS] iceberg;
     ```
 
-    删除 Catalog 并不会删除 Iceberg 中的任何库表信息。仅仅是在 Apache Doris 中移除了对这个 Iceberg Catalog 的映射。
+    删除 `Catalog` 并不会删除 `Iceberg` 中的任何库表信息。仅仅是在 `Apache Doris` 中移除了对这个 `Iceberg Catalog` 的映射。
 
 ### 1.2 Database
 
 * 创建
 
-    可以通过 `SWITCH` 语句切换到对应的 Catalog 下，执行 `CREATE DATABASE` 语句：
+    可以通过 `SWITCH` 语句切换到对应的 `Catalog` 下，执行 `CREATE DATABASE` 语句：
 
     ```sql
     SWITCH iceberg;
     CREATE DATABASE [IF NOT EXISTS] iceberg_db;
     ```
 
-    也可以使用全限定名创建，或指定 location，如：
+    也可以使用全限定名创建，或指定 `location` ，如：
 
     ```sql
     CREATE DATABASE [IF NOT EXISTS] iceberg.iceberg_db;
     ```
 
-    之后可以通过 `SHOW CREATE DATABASE` 命令可以查看 Database 的相关信息：
+    之后可以通过 `SHOW CREATE DATABASE` 命令可以查看 `Database` 的相关信息：
 
     ```sql
     mysql> SHOW CREATE DATABASE iceberg_db;
@@ -85,13 +85,13 @@
 
     !!! warning
 
-        对于 Iceberg Database，必须先删除这个 Database 下的所有表后，才能删除 Database，否则会报错。这个操作会同步删除 Iceberg 中对应的 Database。
+        对于 `Iceberg Database` ，必须先删除这个 `Database` 下的所有表后，才能删除 `Database` ，否则会报错。这个操作会同步删除 `Iceberg` 中对应的 `Database` 。
 
 ### 1.3 Table
 
 * 创建
 
-    Apache Doris 支持在 Iceberg 中创建分区或非分区表。
+    `Apache Doris` 支持在 `Iceberg` 中创建分区或非分区表。
 
     ```sql
     -- Create unpartitioned iceberg table
@@ -133,11 +133,11 @@
     );
     ```
 
-    创建后，可以通过 `SHOW CREATE TABLE` 命令查看 Iceberg 的建表语句。关于分区表的分区函数，可以参阅后面的【分区】小节。
+    创建后，可以通过 `SHOW CREATE TABLE` 命令查看 `Iceberg` 的建表语句。关于分区表的分区函数，可以参阅后面的【分区】小节。
 
 * 列类型
 
-    在 Apache Doris 中创建 Iceberg 表所使用的列类型，和 Iceberg 中的列类型对应关系如下
+    在 `Apache Doris` 中创建 `Iceberg` 表所使用的列类型，和 `Iceberg` 中的列类型对应关系如下
 
     | Apache Doris | Iceberg |
     | -- | -- |
@@ -156,21 +156,21 @@
 
     * 注意：目前只支持这些数据类型，其它数据类型会报错。
 
-    * 列类型暂时只能为默认的 Nullable，不支持 NOT NULL。
+    * 列类型暂时只能为默认的 `Nullable` ，不支持 `NOT NULL` 。
 
-    * 插入数据后，如果类型不能够兼容，例如 `'abc'` 插入到数值类型，则会转为 null 值后插入。
+    * 插入数据后，如果类型不能够兼容，例如 `'abc'` 插入到数值类型，则会转为 `null` 值后插入。
 
 * 删除
 
-    可以通过 `DROP TABLE` 语句删除一个 Iceberg 表。当前删除表后，会同时删除数据，包括分区数据。
+    可以通过 `DROP TABLE` 语句删除一个 `Iceberg` 表。当前删除表后，会同时删除数据，包括分区数据。
 
 * 分区
 
-    Iceberg 中的分区类型对应 Apache Doris 中的 List 分区。因此，在 Apache Doris 中 创建 Iceberg 分区表，需使用 List 分区的建表语句，但无需显式的枚举各个分区。在写入数据时，Apache Doris 会根据数据的值，自动创建对应的 Iceberg 分区。
+    `Iceberg` 中的分区类型对应 `Apache Doris` 中的 `List` 分区。因此，在 `Apache Doris` 中创建 `Iceberg` 分区表，需使用 `List` 分区的建表语句，但无需显式的枚举各个分区。在写入数据时， `Apache Doris` 会根据数据的值，自动创建对应的 `Iceberg` 分区。
 
     * 支持创建单列或多列分区表。
 
-    * 支持分区转换函数来支持 Iceberg 隐式分区以及分区演进的功能。具体 Iceberg 分区转换函数可以查看 Iceberg partition transforms
+    * 支持分区转换函数来支持 `Iceberg` 隐式分区以及分区演进的功能。具体 `Iceberg` 分区转换函数可以查看 `Iceberg partition transforms`
 
         * `year(ts)` 或者 `years(ts)`
 
@@ -186,27 +186,27 @@
 
 * 文件格式
 
-    * Parquet（默认）
+    * `Parquet` （默认）
 
-    * ORC
+    * `ORC`
 
 * 压缩格式
 
-    * Parquet：snappy，zstd（默认），plain。（plain 就是不采用压缩）
+    * `Parquet` ： `snappy` ， `zstd` （默认）， `plain` 。（ `plain` 就是不采用压缩）
 
-    * ORC：snappy，zlib（默认），zstd，plain。（plain 就是不采用压缩）
+    * `ORC` ： `snappy` ， `zlib` （默认）， `zstd` ， `plain` 。（ `plain` 就是不采用压缩）
 
 * 存储介质
 
-    * HDFS
+    * `HDFS`
 
     * 对象存储
 
 ## 2 数据操作
 
-可以通过 INSERT 语句将数据写入到 Iceberg 表中。
+可以通过 `INSERT` 语句将数据写入到 `Iceberg` 表中。
 
-支持写入到由 Apache Doris 创建的 Iceberg 表，或者 Iceberg 中已存在的且格式支持的表。
+支持写入到由 `Apache Doris` 创建的 `Iceberg` 表，或者 `Iceberg` 中已存在的且格式支持的表。
 
 对于分区表，会根据数据，自动写入到对应分区，或者创建新的分区。
 
@@ -214,7 +214,7 @@
 
 ### 2.1 INSERT
 
-INSERT 操作会数据以追加的方式写入到目标表中。
+`INSERT` 操作会数据以追加的方式写入到目标表中。
 
 ```sql
 INSERT INTO iceberg_tbl values (val1, val2, val3, val4);
@@ -226,7 +226,7 @@ INSERT INTO iceberg_tbl(col1, col2, partition_col1, partition_col2) values (1, 2
 
 ### 2.2 INSERT OVERWRITE
 
-INSERT OVERWRITE 会使用新的数据完全覆盖原有表中的数据。
+`INSERT OVERWRITE` 会使用新的数据完全覆盖原有表中的数据。
 
 ```sql
 INSERT OVERWRITE TABLE VALUES(val1, val2, val3, val4)
@@ -235,13 +235,13 @@ INSERT OVERWRITE TABLE iceberg.iceberg_db.iceberg_tbl(col1, col2) SELECT col1, c
 
 ### 2.3 CTAS(CREATE TABLE AS SELECT)
 
-可以通过 `CTAS` 语句创建 Iceberg 表并写入数据：
+可以通过 `CTAS` 语句创建 `Iceberg` 表并写入数据：
 
 ```sql
 CREATE TABLE iceberg_ctas ENGINE=iceberg AS SELECT * FROM other_table;
 ```
 
-CTAS 支持指定文件格式、分区方式等信息，如：
+`CTAS` 支持指定文件格式、分区方式等信息，如：
 
 ```sql
 CREATE TABLE iceberg_ctas ENGINE=iceberg
@@ -259,23 +259,23 @@ AS SELECT col1,pt1 as col2,pt2 as pt1 FROM test_ctas.part_ctas_src WHERE col1>0;
 
 ## 3 异常数据和数据转换
 
-TODO
+`TODO`
 
 ### 3.1 HDFS 文件操作
 
-在 HDFS 上的 Iceberg 表数据会写入到最终目录，提交 Iceberg 元数据进行管理。
+在 `HDFS` 上的 `Iceberg` 表数据会写入到最终目录，提交 `Iceberg` 元数据进行管理。
 
 写入的数据文件名称格式为： `<query-id>_<uuid>-<index>.<compress-type>.<file-type>`
 
 ### 3.2 对象存储文件操作
 
-TODO
+`TODO`
 
 ## 4 相关参数
 
 ### 4.1 FE
 
-TODO
+`TODO`
 
 ### 4.2 BE
 
