--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.11 阿里云 MaxCompute.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.11 阿里云 MaxCompute.md
@@ -1,6 +1,6 @@
 # 7.4.11 阿里云 MaxCompute
 
-MaxCompute 是阿里云上的企业级 SaaS（Software as a Service）模式云数据仓库。
+`MaxCompute` 是阿里云上的企业级 `SaaS` （ `Software as a Service` ）模式云数据仓库。
 
 ## 1 连接 MaxCompute
 
@@ -50,7 +50,7 @@ select * from tb  limit 10;
 | -- | -- | -- |
 | mc.quota | pay-as-you-go | Quota名称。请参照下文的 如何获取Endpoint 和 Quota 来配置。 |
 | mc.split_strategy | byte_size | 设置split的划分方式， 可设置为按照字节大小划分 byte_size 和按照数据行数划分 row_count |
-| mc.split_byte_size | 268435456 | 每个split读取的文件大小，单位为字节，默认为256MB，当且仅当 "mc.split_strategy" = |  |"byte_size" 时生效 |
+| mc.split_byte_size | 268435456 | 每个split读取的文件大小，单位为字节，默认为256MB，当且仅当 "mc.split_strategy" =  "byte_size" 时生效 |
 | mc.split_row_count | 1048576 | 每个split读多少行，当且仅当 "mc.split_strategy" = "row_count" 时生效 |
 
 ## 2 列类型映射
@@ -81,16 +81,16 @@ select * from tb  limit 10;
 
 ## 3 使用须知
 
-1. 自3.0.3版本开始, MaxCompute Catalog 基于 开放存储SDK 开发。
+1. 自 `3.0.3` 版本开始， `MaxCompute Catalog` 基于开放存储 `SDK` 开发。
 
-2. 开放存储SDK的使用有一定的限制，请参照该 文档 中 使用限制 的章节。
+2. 开放存储 `SDK` 的使用有一定的限制，请参照该文档中使用限制的章节。
 
-3. MaxCompute 中的 Project 相当于 Doris 中的 DataBase 。
+3. `MaxCompute` 中的 `Project` 相当于 `Doris` 中的 `DataBase` 。
 
 ## 4 如何获取 Endpoint 和 Quota
 
-1. 如果您使用数据传输服务独享资源组, 请参照该 文档 中 `使用独享数据服务资源组` 章节中的 `2.授权` 来开启相应的权限，并在 `配额（Quota）管理` 列表中，查看并复制对应的QuotaName，指定 `"mc.quota" = "QuotaName"` 。此时您可以选择 VPC / 公网来访问 MaxCompute，但是走 VPC 的带宽有保障，公网带宽资源小。
+1. 如果您使用数据传输服务独享资源组，请参照该文档中 `使用独享数据服务资源组` 章节中的 `2.授权` 来开启相应的权限，并在配额（ `Quota` ）管理列表中，查看并复制对应的 `QuotaName` ，指定 `"mc.quota" = "QuotaName"` 。此时您可以选择 `VPC` 或公网来访问 `MaxCompute` ，但是走 `VPC` 的带宽有保障，公网带宽资源小。
 
-2. 如果您使用按量付费，请参照该 文档 中 `使用开放存储（按量付费）` 的章节，来开启开放存储(Storage API)开关，并给 Ak,SK 对应的用户赋予权限。此时您的 `mc.quota` 为默认值 `pay-as-you-go` ，不需要额外指定该值。此时您只能使用 VPC 来访问 MaxCompute。
+2. 如果您使用按量付费，请参照该文档中使用开放存储（按量付费）的章节，来开启开放存储（ `Storage API` ）开关，并给 `Ak` ， `SK` 对应的用户赋予权限。此时您的 `mc.quota` 为默认值 `pay-as-you-go` ，不需要额外指定该值。此时您只能使用 `VPC` 来访问 `MaxCompute` 。
 
-3. 通过第 1/2 步，您已经知道该如何访问 MaxCompute，下面需要根据 阿里云 Endpoints 文档 中的 `地域Endpoint对照表` 来配置 `mc.endpoint` 。使用 VPC 访问的用户，需要根据 `各地域Endpoint对照表（阿里云VPC网络连接方式）` 表中的 `VPC网络Endpoint` 列来配置 `mc.endpoint` 。使用公网访问的用户，可以选择 `各地域Endpoint对照表（阿里云经典网络连接方式）` 表中的 `经典网络Endpoint` 列、或者选择 `各地域Endpoint对照表（外网连接方式)` 表中的 `外网Endpoint` 列来配置 `mc.endpoint` 。
+3. 通过第 `1/2` 步，您已经知道该如何访问 `MaxCompute` ，下面需要根据阿里云 `Endpoints` 文档中的地域 `Endpoint` 对照表来配置 `mc.endpoint` 。使用 `VPC` 访问的用户，需要根据各地域 `Endpoint` 对照表（阿里云 `VPC` 网络连接方式）表中的 `VPC` 网络 `Endpoint` 列来配置 `mc.endpoint` 。使用公网访问的用户，可以选择各地域 `Endpoint` 对照表（阿里云经典网络连接方式）表中的经典网络 `Endpoint` 列、或者选择各地域 `Endpoint` 对照表（外网连接方式）表中的外网 `Endpoint` 列来配置 `mc.endpoint` 。
