--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.9 外表统计信息.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.9 外表统计信息.md
@@ -1,12 +1,12 @@
 # 7.9 外表统计信息
 
-外表统计信息的收集方式和收集内容与内表基本一致，详细信息可以参考统计信息。 2.0.3 版本之后，Hive 外表支持了自动和采样收集。
+外表统计信息的收集方式和收集内容与内表基本一致，详细信息可以参考统计信息。 `2.0.3` 版本之后， `Hive` 外表支持了自动和采样收集。
 
 ## 1 注意事项
 
-1. 目前 (2.0.3) 只有 Hive 外表支持自动和采样收集。HMS 类型的 Iceberg 和 Hudi 外表，以及 JDBC 外表只支持手动全量收集。其他类型的外表暂不支持统计信息收集。
+1. 目前（ `2.0.3` ）只有 `Hive` 外表支持自动和采样收集。 `HMS` 类型的 `Iceberg` 和 `Hudi` 外表，以及 `JDBC` 外表只支持手动全量收集。其他类型的外表暂不支持统计信息收集。
 
-2. 外表默认关闭自动统计信息收集功能，需要在创建 Catalog 的时候添加属性来打开，或者通过设置 Catalog 属性来开启或关闭。
+2. 外表默认关闭自动统计信息收集功能，需要在创建 `Catalog` 的时候添加属性来打开，或者通过设置 `Catalog` 属性来开启或关闭。
 
 ## 2 创建 Catalog 时打开自动收集的属性 (默认是 false)
 
