--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.2 Doris 存算分离模式部署准备.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.2 Doris 存算分离模式部署准备.md
@@ -2,31 +2,31 @@
 
 ## 1 概述
 
-本文档介绍了 Apache Doris 存算分离模式的部署准备工作。存算分离架构旨在提高系统的可扩展性和性能，适用于大规模数据处理场景。
+本文档介绍了 `Apache Doris` 存算分离模式的部署准备工作。存算分离架构旨在提高系统的可扩展性和性能，适用于大规模数据处理场景。
 
 ## 2 架构组件
 
-Doris 存算分离架构包含三个主要模块：
+`Doris` 存算分离架构包含三个主要模块：
 
-1. Frontend (FE)：处理用户请求和管理元数据。
+1. `Frontend (FE)` ：处理用户请求和管理元数据。
 
-2. Backend (BE)：无状态计算节点，执行查询任务。
+2. `Backend (BE)` ：无状态计算节点，执行查询任务。
 
-3. Meta Service (MS)：管理元数据操作和数据回收。
+3. `Meta Service (MS)` ：管理元数据操作和数据回收。
 
 ## 3 系统要求
 
 ### 3.1 硬件要求
 
-* 最小配置：3 台服务器
+* 最小配置： `3` 台服务器
 
-* 推荐配置：5 台或更多服务器
+* 推荐配置： `5` 台或更多服务器
 
 ### 3.2 软件依赖
 
-* FoundationDB (FDB) 7.1.38 或更高版本
+* `FoundationDB (FDB) 7.1.38` 或更高版本
 
-* OpenJDK 17
+* `OpenJDK 17`
 
 ## 4 部署规划
 
@@ -36,27 +36,27 @@ Doris 存算分离架构包含三个主要模块：
 
 ### 4.2 生产部署
 
-* 3 台或更多机器部署 FDB
+* `3` 台或更多机器部署 `FDB`
 
-* 3 台或更多机器部署 FE 和 Meta Service
+* `3` 台或更多机器部署 `FE` 和 `Meta Service`
 
-* 3 台或更多机器部署 BE
+* `3` 台或更多机器部署 `BE`
 
-机器配置高时，可以考虑 FDB、FE 和 Meta Service 混布，但是磁盘不要混用。
+机器配置高时，可以考虑 `FDB` 、 `FE` 和 `Meta Service` 混布，但是磁盘不要混用。
 
 ## 5 安装步骤
 
 ### 5.1. 安装 FoundationDB
 
-本节提供了脚本 `fdb_vars.sh` 和 `fdb_ctl.sh` 配置、部署和启动 FDB（FoundationDB）服务的分步指南。您可以下载 doris tools 并从 `fdb` 目录获取 `fdb_vars.sh` 和 `fdb_ctl.sh` 。
+本节提供了脚本 `fdb_vars.sh` 和 `fdb_ctl.sh` 配置、部署和启动 `FDB(FoundationDB)` 服务的分步指南。您可以下载 `doris tools` 并从 `fdb` 目录获取 `fdb_vars.sh` 和 `fdb_ctl.sh` 。
 
 #### 5.1.1 机器要求
 
-通常，至少需要 3 台配备 SSD 的机器来形成具有双数据副本并允许单机故障的 FoundationDB 集群。
+通常，至少需要 `3` 台配备 `SSD` 的机器来形成具有双数据副本并允许单机故障的 `FoundationDB` 集群。
 
 !!! tip
 
-    如果仅用于开发/测试目的，单台机器就足够了。
+    如果仅用于开发或测试目的，单台机器就足够了。
 
 #### 5.1.2 fdb_vars.sh 配置
 
@@ -79,37 +79,37 @@ Doris 存算分离架构包含三个主要模块：
 
 #### 5.1.3 部署 FDB 集群
 
-使用 `fdb_vars.sh` 配置环境后，您可以在每个节点上使用 `fdb_ctl.sh` 脚本部署 FDB 集群。
+使用 `fdb_vars.sh` 配置环境后，您可以在每个节点上使用 `fdb_ctl.sh` 脚本部署 `FDB` 集群。
 
 ```shell
 ./fdb_ctl.sh deploy
 ```
 
-此命令启动 FDB 集群的部署过程。
+此命令启动 `FDB` 集群的部署过程。
 
 #### 5.1.4 启动 FDB 服务
 
-FDB 集群部署完成后，您可以使用 `fdb_ctl.sh` 脚本启动 FDB 服务。
+`FDB` 集群部署完成后，您可以使用 `fdb_ctl.sh` 脚本启动 `FDB` 服务。
 
 ```shell
 ./fdb_ctl.sh start
 ```
 
-此命令启动 FDB 服务，使集群工作并获取 FDB 集群连接字符串，后续可以用于配置 MetaService。
+此命令启动 `FDB` 服务，使集群工作并获取 `FDB` 集群连接字符串，后续可以用于配置 `MetaService` 。
 
 ### 5.2 安装 OpenJDK 17
 
-1. 下载 OpenJDK 17
+1. 下载 `OpenJDK 17`
 
-2. 解压并设置环境变量 JAVA_HOME.
+2. 解压并设置环境变量 `JAVA_HOME`
 
 ### 5.3 安装 S3 或 HDFS 服务（可选）
 
-Apache Doris 存算分离模式会将数据存储在 S3 服务或 HDFS 服务上面，如果您已经有相关服务，直接使用即可。如果没有，本文档提供 MinIO 的简单部署教程：
+`Apache Doris` 存算分离模式会将数据存储在 `S3` 服务或 `HDFS` 服务上面，如果您已经有相关服务，直接使用即可。如果没有，本文档提供 `MinIO` 的简单部署教程：
 
-1. 在 MinIO 的下载页面选择合适的版本以及操作系统，下载对应的 Server 以及 Client 的二进制包或安装包。
+1. 在 `MinIO` 的下载页面选择合适的版本以及操作系统，下载对应的 `Server` 以及 `Client` 的二进制包或安装包。
 
-2. 启动 MinIO Server
+2. 启动 `MinIO Server`
 
     ```shell
     export MINIO_REGION_NAME=us-east-1
@@ -118,7 +118,7 @@ Apache Doris 存算分离模式会将数据存储在 S3 服务或 HDFS 服务上
     nohup ./minio server /mnt/data 2>&1 &
     ```
 
-3. 配置 MinIO Client
+3. 配置 `MinIO Client`
 
     ```shell
     # 如果你使用的是安装包安装的客户端，那么客户端名为 mcli，直接下载客户端二进制包，则其名为 mc
@@ -151,20 +151,20 @@ Apache Doris 存算分离模式会将数据存储在 S3 服务或 HDFS 服务上
 
 1. 部署
 
-2. 管理 Compute Group
+2. 管理 `Compute Group`
 
-3. 管理 Storage Vault
+3. 管理 `Storage Vault`
 
 ## 7 注意事项
 
 * 确保所有节点的时间同步
 
-* 定期备份 FoundationDB 数据
+* 定期备份 `FoundationDB` 数据
 
-* 根据实际负载调整 FoundationDB 和 Doris 的配置参数
+* 根据实际负载调整 `FoundationDB` 和 `Doris` 的配置参数
 
 ## 8 参考资料
 
-* FoundationDB 官方文档
+* `FoundationDB` 官方文档
 
-* Apache Doris 官方网站
+* `Apache Doris` 官方网站
