--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.7 Meta Service API 参考.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.7 Meta Service API 参考.md
@@ -1,18 +1,18 @@
 # 8.7 Meta Service API 参考
 
-本文介绍 Meta Service 提供的所有 API。
+本文介绍 `Meta Service` 提供的所有 `API` 。
 
 ## 1 API 版本
 
 为了兼容和扩展的需要，未来所有接口实现中均附带明确的版本号，使用时建议附带版本号加以区分。目前，所有已有接口均已添加 `v1/` 作为版本标识。
 
-以 `create_instance` 为例，附带 API 版本的接口为：
+以 `create_instance` 为例，附带 `API` 版本的接口为：
 
 ```shell
 PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 ```
 
-为了保证兼容性，已有的接口不附带 v1/ 仍能访问。
+为了保证兼容性，已有的接口不附带 `v1/` 仍能访问。
 
 ## 2 字段值要求
 
@@ -28,13 +28,13 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 3.1 接口描述
 
-本接口用于创建一个 Instance，支持使用一个或多个存储后端（包括 HDFS 和 S3）。该 Instance 不包含任何节点信息，不能多次创建同一个 `instance_id` 的 Instance。
+本接口用于创建一个 `Instance` ，支持使用一个或多个存储后端（包括 `HDFS` 和 `S3` ）。该 `Instance` 不包含任何节点信息，不能多次创建同一个 `instance_id` 的 `Instance` 。
 
 ### 3.2 请求
 
 #### 3.2.1 基于 HDFS 为存储后端的请求
 
-* 创建基于 HDFS 为存储后端的请求语法
+* 创建基于 `HDFS` 为存储后端的请求语法
 
     ```shell
     PUT /MetaService/http/create_instance?token=<token> HTTP/1.1
@@ -65,7 +65,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
     }
     ```
 
-* 创建基于 HDFS 为存储后端的请求参数
+* 创建基于 `HDFS` 为存储后端的请求参数
 
     | 参数名 | 描述 | 是否必须 | 备注 |
     | -- | -- | -- | -- |
@@ -82,7 +82,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
     | vault.build_conf.hdfs_confs | HDFS 的其他描述属性 | 否 | 按需填写 |
     | vault.prefix | 数据存放的路径前缀，用于数据隔离 | 是 | 一般按照业务名称 例： `big_data` |
 
-* 创建基于 HDFS 为存储后端的请求示例
+* 创建基于 `HDFS` 为存储后端的请求示例
 
     ```shell
     PUT /MetaService/http/create_instance?token=greedisgood9999 HTTP/1.1
@@ -216,7 +216,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 4.1 接口描述
 
-本接口用于创建一个 Instance，该 Instance 仅使用 S3 作为其存储后端，并且只能使用一个存储后端。该 Instance 不包含任何节点信息，不能多次创建同一个 `instance_id` 的 Instance。
+本接口用于创建一个 `Instance` ，该 `Instance` 仅使用 `S3` 作为其存储后端，并且只能使用一个存储后端。该 `Instance` 不包含任何节点信息，不能多次创建同一个 `instance_id` 的 `Instance` 。
 
 ### 4.2 请求
 
@@ -329,7 +329,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 5.1 接口描述
 
-本接口用于删除一个已存在的 Instance，标记删除后，Recycler 会异步回收资源。
+本接口用于删除一个已存在的 `Instance` ，标记删除后， `Recycler` 会异步回收资源。
 
 ### 5.2 请求
 
@@ -390,7 +390,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 6.1 接口描述
 
-本接口用于查询 Instance 下的信息（包括 S3 信息、Cluster 信息、Stage 信息等），可用于 Debug。
+本接口用于查询 `Instance` 下的信息（包括 `S3` 信息、 `Cluster` 信息、 `Stage` 信息等），可用于 `Debug` 。
 
 ### 6.2 请求
 
@@ -563,7 +563,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 7.1 接口描述
 
-本接口用于将某个 Instance 的状态设置为 `NORMAL` 或者 `OVERDUE` 。
+本接口用于将某个 `Instance` 的状态设置为 `NORMAL` 或者 `OVERDUE` 。
 
 ### 7.2 请求
 
@@ -615,7 +615,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 8.1 接口描述
 
-本接口用于获取 Instance 配置的 S3 的 AK/SK 信息，此接口可使用相同参数调用多次。
+本接口用于获取 `Instance` 配置的 `S3` 的 `AK/SK` 信息，此接口可使用相同参数调用多次。
 
 ### 8.2 请求
 
@@ -688,7 +688,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 9.1 接口描述
 
-本接口用于更新 Instance 配置的 S3 和 RAM_USER 的 AK/SK 信息，使用 `user_id` 查询修改项，一般用于 AK/SK 轮转，使用相同参数调用此接口会报错。
+本接口用于更新 `Instance` 配置的 `S3` 和 `RAM_USER` 的 `AK/SK` 信息，使用 `user_id` 查询修改项，一般用于 `AK/SK` 轮转，使用相同参数调用此接口会报错。
 
 ### 9.2 请求
 
@@ -792,7 +792,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 10.1 接口描述
 
-本接口用于更新 Instance 配置的 S3 的 AK/SK 信息，使用 ID 查询修改项，ID 可由 `get_obj_store_info` 查询而得。此接口使用相同参数多次调用会报错。
+本接口用于更新 `Instance` 配置的 `S3` 的 `AK/SK` 信息，使用 `ID` 查询修改项， `ID` 可由 `get_obj_store_info` 查询而得。此接口使用相同参数多次调用会报错。
 
 ### 10.2 请求
 
@@ -867,7 +867,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 11.1 接口描述
 
-本接口用于添加 Instance 配置的 S3 的信息，最多支持添加 10 条 S3 信息，每条配置最多不超过 1024 字节大小。
+本接口用于添加 `Instance` 配置的 `S3` 的信息，最多支持添加 `10` 条 `S3` 信息，每条配置最多不超过 `1024` 字节大小。
 
 ### 11.2 请求
 
@@ -951,7 +951,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 12.1 接口描述
 
-本接口用于创建一个属于 Instance 的计算集群。该计算集群中包含若干（大于等于 0 个）相同类型节点信息，此接口不能用同一参数调用。
+本接口用于创建一个属于 `Instance` 的计算集群。该计算集群中包含若干（大于等于 `0` 个）相同类型节点信息，此接口不能用同一参数调用。
 
 ### 12.2 请求
 
@@ -1133,7 +1133,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 14.1 接口描述
 
-本接口用于删除一个 Instance 下的某个计算集群的信息，此接口若多次使用相同参数调用会报错。
+本接口用于删除一个 `Instance` 下的某个计算集群的信息，此接口若多次使用相同参数调用会报错。
 
 ### 14.2 请求
 
@@ -1205,7 +1205,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 15.1 接口描述
 
-本接口用于将 Instance 下的计算集群重命名，依据传入的 `cluster_id` 寻找相应的 `cluster_name` 进行重命名，此接口若多次使用相同参数调用会报错。
+本接口用于将 `Instance` 下的计算集群重命名，依据传入的 `cluster_id` 寻找相应的 `cluster_name` 进行重命名，此接口若多次使用相同参数调用会报错。
 
 ### 15.2 请求
 
@@ -1277,9 +1277,9 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 16.1 接口描述
 
-本接口用于将 Instance 下的某计算集群添加若干相同类型的节点，此接口若多次使用相同参数调用会报错。
+本接口用于将 `Instance` 下的某计算集群添加若干相同类型的节点，此接口若多次使用相同参数调用会报错。
 
-本接口可用于添加 FE 或者 BE 节点。
+本接口可用于添加 `FE` 或者 `BE` 节点。
 
 ### 16.2 请求
 
@@ -1385,7 +1385,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 17.1 接口描述
 
-本接口用于将 Instance 下的某计算集群减少若干相同类型的节点。
+本接口用于将 `Instance` 下的某计算集群减少若干相同类型的节点。
 
 ### 17.2 请求
 
@@ -1485,7 +1485,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 18.1 接口描述
 
-本接口用于为 Instance 下的某计算集群添加用户名，使相应用户可以使用 MySQL Client 登录系统，使用默认计算集群。
+本接口用于为 `Instance` 下的某计算集群添加用户名，使相应用户可以使用 `MySQL Client` 登录系统，使用默认计算集群。
 
 ### 18.2 请求
 
@@ -1565,11 +1565,11 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 19.1 接口描述
 
-本接口用于获取计算集群下，BE 节点运行 Fragment 的情况。
+本接口用于获取计算集群下， `BE` 节点运行 `Fragment` 的情况。
 
 !!! tip
 
-    此接口是请求 FE 的接口。
+    此接口是请求 `FE` 的接口。
 
 ### 19.2 请求
 
@@ -1640,7 +1640,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 20.1 接口描述
 
-本接口用于开启 Instance 对象数据服务端加密。
+本接口用于开启 `Instance` 对象数据服务端加密。
 
 ### 20.2 请求
 
@@ -1701,7 +1701,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 21.1 接口描述
 
-本接口用于获取多个 Instance 下的计算集群运行状态。
+本接口用于获取多个 `Instance` 下的计算集群运行状态。
 
 ### 21.2 请求
 
@@ -1782,7 +1782,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 22.1 接口描述
 
-本接口用于设置某个 Instance 下的计算集群运行状态。
+本接口用于设置某个 `Instance` 下的计算集群运行状态。
 
 ### 22.2 请求
 
@@ -1841,15 +1841,15 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
     }
     ```
 
-由于该接口由云管平台与 FE 共同使用，设置状态时，需遵守特定的状态变化限制。只允许以下状态变换：
+由于该接口由云管平台与 `FE` 共同使用，设置状态时，需遵守特定的状态变化限制。只允许以下状态变换：
 
-* `ClusterStatus::UNKNOWN` -> `ClusterStatus::NORMAL`（云管平台创建计算集群时，将初始状态直接置为 `NORMAL` ，此操作通常在 add_cluster 接口中完成）
+* `ClusterStatus::UNKNOWN -> ClusterStatus::NORMAL` （云管平台创建计算集群时，将初始状态直接置为 `NORMAL` ，此操作通常在 `add_cluster` 接口中完成）
 
-* `ClusterStatus::NORMAL` -> `ClusterStatus::SUSPENDED`（云管平台暂停计算集群时设置）
+* `ClusterStatus::NORMAL -> ClusterStatus::SUSPENDED` （云管平台暂停计算集群时设置）
 
-* `ClusterStatus::SUSPENDED` -> `ClusterStatus::TO_RESUME`（FE 唤起计算集群时设置）
+* `ClusterStatus::SUSPENDED -> ClusterStatus::TO_RESUME` （ `FE` 唤起计算集群时设置）
 
-* `ClusterStatus::TO_RESUME` -> `ClusterStatus::NORMAL`（云管平台将计算集群状态拉起后设置）
+* `ClusterStatus::TO_RESUME -> ClusterStatus::NORMAL` （云管平台将计算集群状态拉起后设置）
 
 若尝试执行以上未列出的状态变换，系统将返回错误提示：
 
@@ -1864,7 +1864,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 23.1 接口描述
 
-本接口用于 decode Meta Service Log 中的 Key 信息，用于调试。
+本接口用于 `decode Meta Service Log` 中的 `Key` 信息，用于调试。
 
 ### 23.2 请求
 
@@ -1906,7 +1906,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 24.1 接口描述
 
-本接口用于查询 Tablet 状态，用于调试。
+本接口用于查询 `Tablet` 状态，用于调试。
 
 ### 24.2 请求
 
@@ -1983,7 +1983,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 25.1 接口描述
 
-本接口用于 Abort 事务，用于调试。
+本接口用于 `Abort` 事务，用于调试。
 
 ### 25.2 请求
 
@@ -2039,7 +2039,7 @@ PUT /MetaService/http/v1/create_instance?token=<token> HTTP/1.1
 
 ### 26.1 接口描述
 
-本接口用于 Abort Tablet 上的 Job，当前只支持 Compaction Job，用于调试。
+本接口用于 `Abort Tablet` 上的 `Job` ，当前只支持 `Compaction Job` ，用于调试。
 
 ### 26.2 请求
 
